--- a/레벨2.md
+++ b/레벨2.md
@@ -1,148 +1,142 @@
 # 독서로부터
+## 
 
-저에겐 무료하게 보낸 수년간의 시간이 있었습니다.
-
+저에겐 의식 없이 보낸 수년간의 시간이 있었습니다.
 무엇을 위해 사는지도 몰랐기에 어떠한 열정도, 용기도, 목적마저도 존재하지 않던 시간입니다.
-
 초등학교를 입학해서 대학교에 다니는 순간까지 눈앞에 주어진 것들을 해치우며 나아갔습니다.
-
-하지만, 내가 어디로 가는지는 잘 몰랐습니다. 그렇다고 궁금해 하지도 않았습니다. 
-
+하지만, 내가 어디로 가는지는 잘 몰랐습니다. 그렇다고 궁금해하지도 않았습니다.
 가고 싶은 곳도 없었고, 있다 한들 갈 수 있다는 자신도 없었기 때문입니다.
-
 힘을 빼고 튜브만 꽉 잡고 있었더니 가라앉지 않고 잘 흘러갔거든요.
 
 <br>
 
 몸을 맡기고 유유자적하게 흘러가다 보니 주변 사람들이 군대를 가더군요.
-
 다들 그리했으니, 저도 따라서 군대를 갔습니다.
-
 군대는 여러 의미로 특이한 곳이었습니다.
-
 수직적인 구조를 지키기 위해 비효율적인 업무들이 즐비해 있었거든요.
-
 이러한 구조는 할 일 없이 보내야 하는 시간을 많이 만들어 냈습니다.
-
 그리고, 이 시간은 독서와 멀었던 저에게 하릴없이 책을 읽게 만들었습니다.
-
-이때 읽은 『오리진』 이라는 소설이 효시가 되어 지금까지도 소소하게 독서를 하고 있습니다.
+이때 읽은 소설이 효시가 되어 지금까지도 소소하게 독서를 하고 있습니다.
 
 <br>
 
-지금까지도 놓지 않는 이유는 독서로부터 달라진 지금의 제 모습이 꽤나 만족스럽기 때문입니다.
-
+지금까지도 독서를 놓지 않는 이유는 독서로부터 달라진 지금의 제 모습이 꽤나 만족스럽기 때문입니다.
 저는 독서를 통해 인내심을 얻었고, 의식적인 삶을 발견하였습니다.
-
-지금의 꿈을 갖게 했고, 노력하는 법을 배웠습니다. 
-
-다양한 사람들을 이해하는 저만의 방법을 발견했고, 다방면의 호기심을 새겨주었습니다. 
-
-또, 복잡계로 얽힌 세상을 이해하는 방식을 얻었고, 그 세간 속에서 인연을 만났습니다.
+지금의 꿈을 갖게 했고, 노력하는 법을 배웠습니다.
+다양한 사람들을 이해하는 저만의 방법을 발견했고, 다방면의 호기심을 새겨주었습니다.
+또, 복잡하게 얽힌 세상을 이해하고자 노력하기 시작했고, 그 세간 속에서 인연을 만났습니다.
 
 <br>
 
 독서는 힘이 있습니다. 수년간 굳어진 무의식적인 삶을 바꿀 수 있는 정도의 힘입니다.
-
 어디에 존재하는지, 어떻게 작용하는지에 대한 제 경험과 감상을 온전히 건네드릴 순 없습니다.
-
 그래도 제가 느낀 이 힘에 대한 단편적인 경험을 짧게 써보고자 합니다.
 
 <br>
 
 ## 인내
 독서는 주체적이면서 정적인 활동입니다.
-
 눈을 뜨면 보이고, 귀를 열면 들리는 수많은 미디어와 빠르게 바뀌는 시각적 자극과는 다릅니다.
-
 정보를 습득하거나 재미를 즐기기엔 비교적 불편한 행동이죠.
-
 10분 동안 동영상을 보는 것과 글을 읽는 것을 상상해 보았을 때,
-
 느껴지는 피로감의 차이로도 불편함이 전달될 것 같습니다.
 
 <br>
 
 이러한 불편함은 인내심을 고양합니다.
-
 이 부분이 장점이라고 생각하지 않을 수도 있지만, 인내심을 가지고 제 얘기를 들어주세요.
 
 <br>
 
-쉽게 얻어지는 것들이 만무한 세상 속에서 인내심은 잊혀지기 쉽다고 생각합니다.
-
+쉽게 얻어지는 것들이 만무한 세상 속에서 인내심은 잊히기 쉽다고 생각합니다.
 단편적인 정보와 사소한 욕구들은 쉽게 얻고 아무런 견딤 없이 얻을 수 있습니다.
-
-이 과정이 익숙해지면, 성취를 위한 견딤과 노력의 참조점은 점점 낮아집니다. 
-
+이 과정이 익숙해지면, 성취를 위한 견딤과 노력의 참조점은 점점 낮아집니다.
 치열한 세상에선 적은 노력의 성취는 가치가 높지 않습니다. 누구나 할 수 있으니까요.
-
 이와 대비하여 그렇지 않은 것들의 가치가 더 높아지고 강조되었습니다.
-
 전문적인 능력이나 고수준의 욕구들은 여전히 많은 시간과 노력, 인내가 필요합니다.
 
 <br>
 
-이런 인내심은 놓치기 쉬우면서도 필수적인 역량이고, 이는 훈련을 통해 고양할 수 있습니다. 
-
+이런 인내심은 놓치기 쉬우면서도 필수적인 역량이고, 이는 훈련을 통해 고양할 수 있습니다.
 그리고 독서가 효과적이고 유연한 인내심 훈련이라고 생각합니다.
-
-적당한 불편함이 집중을 일으키고, 원하는 결과나 내용을 위해 의식적인 노력이 필요 하죠.
-
+적당한 불편함이 집중을 일으키고, 원하는 결과나 내용을 위해 의식적인 노력이 필요하죠.
 동영상처럼 결과를 위해 2배속을 하거나, 종이를 넘겨 다른 문맥의 영역을 단번에 이해할 수 없습니다.
-
 스스로가 감내하며, 나의 속도로 차분히 읽어 나가야 하죠.
 
 <br>
 
 독서는 산만했던 저에게 엉덩이를 무겁게 하는 좋은 훈련책이었습니다.
-
 적당한 인내심을 고양했고, 나만의 속도를 통해 글자를 주체적으로 읽는 법을 발견했거든요.
-
 덕분에 쏟아지는 글이 무섭지 않았고, 책뿐만 아니라 웹 상에 늘어져있는 무수한 글을 봐도 두렵지 않습니다.
-
-탐구 하다 10분이면 지쳤던 이전과 달리 1시간을 탐구해도 견딜 만 하더라고요.
+탐구하다 10분이면 지쳤던 이전과 달리 1시간을 탐구해도 견딜 만하더라고요.
 
 <br>
 
 반드시 독서일 필요는 없습니다. 독서를 통해서만 얻을 수 있는 역량은 아니니깐요.
-
 하지만, 독서를 통해서 비교적 쉽게 훈련할 수 있습니다.
-
 나의 역치에 맞게 시간이나 양을 조절할 수 있고, 글감이라는 훈련 도구도 쉽게 얻을 수 있기 때문입니다.
-
 추가로, 수고스러움을 통해 오래 기억되는 지적 취득도 기대할 수 있습니다.
 
 <br>
 
-저는 하루를 시작하면서 짧게 15분 정도 독서를 하고 있습니다. 오늘 하루 집중해야 할 복잡하고 어려운 업무를 준비하기 전, 주어진 글들을 따라 읽기만 해도 집중하는 법을 쉽게 기억할 수 있어 좋더라고요.
-
-기분이 붕 뜨거나 정신이 산만하다 느껴질 때, 혹은 집중하기 어렵고 머릿속이 정리되지 않을 때 독서를 통한 집중력 훈련을 해보시는 건 어떨까, 하는 주제넘은 제안을 해봅니다.
+저는 하루를 시작하면서 짧게 15분 정도 독서를 하고 있습니다.
+오늘 하루 집중해야 할 복잡하고 어려운 업무를 준비하기 전, 주어진 글들을 따라 읽기만 해도 집중하는 법을 쉽게 기억할 수 있어 좋더라고요.
+기분이 붕 뜨거나 정신이 산만하다 느껴질 때,
+혹은 집중하기 어렵고 머릿속이 정리되지 않을 때 독서를 통한 집중력 훈련을 해보시는 건 어떨까 하는 주제넘은 제안을 해봅니다.
 
 <br>
 
 ## 의식
-훈련으로 다져진 인내심은 두껍고 어려운 책을 도전할 수 있는 용기를 돋아 내었습니다.
-
-필독서처럼 여겨지는 『사피엔스』 를 도전하는 정도의 용기였습니다.
-
-『사피엔스』 에선 호모 사피엔스가 어떻게 지금까지 지구를 정복하게 되었는지에 대해 다양하게 논합니다.
-
-이 책이 어떤 내용인지는 중요하지 않습니다. ~(중요하긴 합니다)~
-
-작가의 글이 나에게 어떤 감상을 남겼고, 어떻게 나에게 작용했는지가 더 중요하다고 생각합니다.
+모두 그러하지 않지만, 대부분의 책은 쉽게 쓰이지 않습니다.
+한 번 세상에 내놓으면 수정할 수 없는 인쇄물이기에
+저자는 본인의 경험, 주장, 지식 혹은 상상들을 꾹꾹 눌러 담고 신중하게 작성하죠.
+그래서인지 그 사람들의 이야기들은 꽤나 흥미롭고, 언제나 새롭습니다.
 
 <br>
 
-저자가 서술했던 호모 사피엔스의 특징 중 가장 인상 깊었던 상상의 실재를 되뇌어 보았습니다.
-
-지금의 국가, 종교, 돈, 인권, 이라는 눈에 보이지 않은 어떤 관념들로 복잡하게 구성하고 있다는 사실은 꽤나 충격적이었습니다. 
-
-태어날 때부터 존재했던, 당연히 존재한다고 믿었던 세상의 받치는 조각들은 실재하지 않는 허상이라는 것을 새삼 깨닫게 되었거든요.
-
-그 속에서 문득 나는 무엇인가에 대한 의식적인 고민의 불씨가 텄습니다.
+정말 다양한 사람들이 자신의 이야기를 글로 담아내더군요.
+군인 출신인 소설가부터 인류, 역사, 과학 등 다양한 분야의 학자와 정신과의사, 판사, 기업가, 건축가 등 다양한 분야의 사람들,
+심지어 죽음의 수용소에서 살아남은 심리학자까지, 본인의 얘기를 담고 있었습니다.
 
 <br>
 
-## 세상
-## 인연
+그리고 이 이야기들을 읽다 보면 그 열정에 감탄하면서도 경외심이 듭니다.
+촉망받는 사람들의 삶과 생각들, 그 결실을 위해 불태웠던 열정들이 전달되면
+때론 그 경외심에 짓눌려 겸손해지기도 합니다.
+하루하루의 즐거움을 쫓는 20대 사람들뿐이었던 주변 환경 속에서 벗어나
+가끔씩은 이런 환경에 대한 실증과 미래에 대한 불안함을 느끼게 해 주었습니다.
+이 울림은 이유 모를 작문의 욕구를 일으킵니다. 나도 저들처럼, 나의 이야기를 하고 싶다고.
+
+<br>
+
+하지만 저는 쓸 이야기가 없었습니다.
+순간순간의 결정을 "그냥"이라는 이유로 해왔었거든요.
+대학을 진학한 이유도 전공을 선택한 이유도 수업을 듣는 이유들 모두, 그냥 다들 그렇게 해서 했었습니다.
+억울했습니다. 나의 이야기는 도대체 어디에 있는 걸까요? 어떻게 하면 찾을 수 있을까요?
+
+잘 쓰인 책을 읽고 난 뒤의 여운과 함께 위 물음에 대한 의구심이 항상 함께 찾아왔습니다.
+덕분에 스스로에 대한 고민과 객관적인 사고, 그리고 삶에 대한 설계를 하기로 결심하게 되었습니다.
+단 한 번도 고민해 본 적 없는 고민입니다. 그래서인지 더 재밌더라고요.
+
+<br>
+
+이해하고 있는 세상이 넓을수록 다양한 고민을 할 수 있습니다. 아는 만큼 보인다고 했던가요.
+새로운 분야의 책을 읽으면, 저의 세계는 더 확장되고 또 새로운 세상에 저를 놓고 의식하게 됩니다.
+게임과 술과 같은 원초적인 쾌락뿐이었던 저의 세계는,
+다양한 사람들이 복잡하게 연결된, 체계적이면서도 모순적이지만 다양한 분야의 학문과 실용들이 즐비한 세계로 확장되었습니다.
+독서는 생각 없이 살아왔던 저에게 자기 발견이라는 중요한 씨앗을 낳았습니다.
+이를 키우고 실천하는 경험이 있는 사람들은 자기 계발서라는 이름으로 앞다투어 이야기하고 있습니다.
+이 사람들의 이야기도 제 세계로 확장하여 실천하였습니다.
+덕분에 주체적인 삶을 위한 노력하는 법을 배웠고 하루하루를 의식하며 저의 이야기를 채워나가고 있습니다.
+
+<br>
+
+독서로부터 저는 의식적인 삶을 얻었습니다.
+매일 독서할 필요도 없습니다. 사실, 독서일 필요도 없습니다.
+스스로에게 물음을 줄 수 있고, 발견할 수 있는 것이라면 상관없습니다.
+저에게는 독서가 그러했습니다.
+
+<br>
+
+어언 4년간 독서를 시작한 이래로 독서로부터 얻은 것들은 인내와 의식 이외에도 많습니다.
+기회가 된다면, 저에 대해 더 자세한 이야기를 적어내고 싶네요.
