--- a/레벨2.md
+++ b/레벨2.md
@@ -123,7 +123,9 @@
 
 기분이 붕 뜨거나 정신이 산만하다 느껴질 때,
 
-혹은 집중하기 어렵고 머릿속이 정리되지 않을 때 독서를 통한 집중력 훈련을 해보시는 건 어떨까 하는 주제넘은 제안을 해봅니다.
+혹은 집중하기 어렵고 머릿속이 정리되지 않을 때 
+
+독서를 통한 집중력 훈련을 해보시는 건 어떨까 하는 주제넘은 제안을 해봅니다.
 
 <br>
 
