fix: 어색한 부분 수정

--- a/레벨2_몰입.md
+++ b/레벨2_몰입.md
@@ -26,14 +26,14 @@
 
 노래는 정말 재미있었다. 친구와 나는 매일 연습하러 학원에 갔고, 레슨 선생님께서는 우리를 예뻐라 하셨다.
 매일 연습실을 나가고 연습하는 대로 일취월장하니
-일 년 정도 지났을까, 난 거의 마음속으로는 그 친구랑 천년의 듀오가 되었다고 생각했다.
+일 년 정도 지났을까, 난 거의 마음속으로는 그 친구랑 영원한 듀오가 되었다고 생각했다.
 
 나중에 가수가 되고 싶다 이런 꿈을 가지기보단, 당장 친구랑 행복하게 노래하는 삶이 좋았다.
 
 하루는 학교 음악 선생님께서 내 친구를 불러 근처의 남학교에서 뮤지컬을 하는데,
 여학생을 모집하고 있다며 뮤지컬 동아리에 들어가 볼 것을 추천해주셔서 오디션을 보고 배역을 배정받았다.
 실용음악과는 다른 세계였다. 특히 몸치인 나에게 춤은 참 힘들었고 열심히 한다고 잘하게 되는 것도 아니라는 쓴 교훈을 얻기도 했다.
-조금이라도 나아지기 위해서는 틈만 나면 악보와 대본을 봤고, 앉아 있을 때도 탭댄스를 연습해야 했다.
+조금이라도 나아지기 위해서는 틈만 나면 악보와 대본을 봐야했고, 앉아 있을 때도 탭댄스를 연습해야 했다.
 
 이때 처음으로 친구보다 나 자신에게 집중해본 것 같다.
 좋았다. 친구가 없어도 온전히 집중하고 나아갈 수 있는 건 흥분되는 일이었다.
@@ -52,14 +52,15 @@
 ---
 
 아쉽게도, 재능도 없었고 부모님께서도 조금 더 학업의 의무를 다하기를 바라셔서 고등학교에 가면서 뮤지컬의 꿈은 접게 되었다.
-그리고 몰입을 경험하고 난 뒤로는 별로 반항하고 싶지도 않았다.
-내가 다시 또 몰입할 수 있는 것을 찾을 수 있을 것 같았다.
+
+하지만 몰입을 경험하고 난 뒤로는 별로 반항하고 싶지 않았다.
+내 반항은 몰입을 위한 방황이었는데, 마음만 먹으면 몰입할 것을 금방 만들 수 있을 것 같았기 때문이다.
 그렇게, 가장 눈앞에 있는 가장 만만한 것인 학교 공부에 몰입하기를 도전했던 것 같다.
 
 지금까지 내가 좋아했던 것들은 전부 다 그랬다. 프로그래밍도 별반 다르지 않았다.
 내가 프로그래밍을 계속해야겠다고 느꼈던 것은 그리 특별한 계기가 아니었다.
 
-인생 최고 `재미없음` 시기였던 스물한 살의 여름.
+인생 최고 `노잼` 시기였던 스물한 살의 여름.
 원격으로 학교 수업을 듣곤 했는데 책상에 앉기만 하면 눕고 싶고
 눕지 않고 강의를 듣는다 해도 대충 필기만 하고 머리에서 휘발시켰다.
 
