--- a/나는 아직도 주제를 모른다.md
+++ b/나는 아직도 주제를 모른다.md
@@ -1,7 +1,7 @@
 ## 나는 아직도 주제를 모른다.
 
 ### 주제를 모르는 나
-‘이번 글쓰기 주제가 뭐에요?’라는 답변에 ‘주제 모르겠어요. 없다고 하던데요?’라는 답변을 받았다. 며칠 정도 주제에 대해 고민했지만 떠오르지 않았다. 그러다가 “나는 왜 주제를 모르겠지?!!”라는 혼잣말이 주제가 되었다. 우리가 흔히 아는 ‘주제’에는 두 가지 뜻이 있다. 글쓰기 주제에서 말하는‘예술 작품에서 지은이가 나타내고자 하는 기본적인 사상.’이라는 뜻과 ‘네 주제를 알아라.’에서 말하는 ‘변변치 않은 처지.’ 이렇게 두 가지이다. 나는 글쓰기 주제를 어떤 걸로 해야 할지 모르겠고 내 주제도 모른다. 누군가는 말한다. 주제를 아는 것이 좋다고. 독자층이 생기고, 글쓰기에 편하고, 보장된 친구를 만나고, 삶이 편해진다고 한다. 하지만 주제를 모르면 독자층을 예상할 수 없고, 글쓰기에 한계가 없고, 의인을 만나고, 삶의 한계가 없어진다. 이러한 생각을 하게 된 경험을 나누어 보려 한다.
+‘이번 글쓰기 주제가 뭐에요?’라는 물음에 ‘주제 모르겠어요. 없다고 하던데요?’라는 답변을 받았다. 며칠 정도 주제에 대해 고민했지만 떠오르지 않았다. 그러다가 '나는 왜 주제를 모르겠지?!!'라는 혼잣말이 주제가 되었다. 우리가 흔히 아는 ‘주제’에는 두 가지 뜻이 있다. 글쓰기 주제에서 말하는‘예술 작품에서 지은이가 나타내고자 하는 기본적인 사상.’이라는 뜻과 ‘네 주제를 알아라.’에서 말하는 ‘변변치 않은 처지.’ 이렇게 두 가지이다. 나는 글쓰기 주제를 어떤 걸로 해야 할지 모르겠고 내 주제도 모른다. 누군가는 말한다. 주제를 아는 것이 좋다고. 독자층을 선택할 수 있고, 글의 구성이 생기고, 보장된 친구를 만나고, 삶이 편해진다고 한다. 하지만 주제를 모르면 독자층이 생겨나고, 글의 탄성이 생기고, 귀인을 만나고, 삶의 한계가 없어진다. 이러한 생각을 하게 된 경험을 나누어 보려 한다.
 
 ### 우정에 주제를 몰랐던 나
 캐나다에서 살 때 이야기이다. 같은 어학원에 다니던 일본인 친구가 있었다. 캐나다에서 대학교를 다니고 있었고 영어를 정말 잘했다. 재미로 어학원을 다니던 이 친구에게 다른 친구들은 다가가기 어려워했고 이미 친구가 많은 거라는 생각에 다가가지도 않았다. 하지만 나는 달랐다. ‘오.. 영어 엄청 잘하는데? 여기서 대학도 다닌다고? 엄청 궁금한데. 말 걸어 봐야겠다.’라는 생각과 함께 “Hey, how are you?”라고 말을 건넸다. 그 후에 나는 시도 때도 없이 연락했고 같이 밥도 먹고 사우나도 가고 스노우보드도 탔다. 무려 8개월을 같이 다녔다. 어학원에서 같은 반 친구들 중 가장 빠르게 실력이 늘 수 있었고 일을 시작할 수도 있었다. 이 친구의 존재와 나의 용기가 없었다면 해낼 수 없을 것이었다. 친구가 졸업하고 일본에 돌아갈 때 했던 말을 끝으로 남긴다. ‘Bro, you’re my best foreign friend. See ya!’
