docs: 크루들의 피드백 반영

--- a/100 vs (80, 20) vs (80 + 20).md
+++ b/100 vs (80, 20) vs (80 + 20).md
@@ -33,29 +33,30 @@
 미션에 대한 열정은 그대로여도, 몰입하는 절대적인 시간은 줄어든 게 맞다.  
 이제 막 사람 사는 냄새가 나기 시작했는데, 그새를 못 참고 성장에 대한 불안감이 엄습했다.
 
-'왜 불안한 거지?' 그 원인을 `준`과의 커피챗에서 찾을 수 있었다.
+'왜 불안한 거지?' 그 원인을 코치 `준`과의 커피챗에서 찾을 수 있었다.
 
-## 80, 20이기 떄문에...🤦‍♂️
+## 80, 20이기 때문에...🤦‍♂️
 
 > 도밥이 `80`과 `20`을 별개의 시간으로 사용해서 `20`의 부재를 의식하게 되는 거 같아요.
 
-가만 생각해 보면 블로그 포스팅은 CS와 용어에 대한 설명을 담았고, 책은 JS코어와 관련된 챕터를 읽었다.  
-이렇게 사용한 `20`은 React를 배우는 `80`에 직접적으로 큰 도움이 되지 않았고, 이는 곧 불안감으로 이어진 것이다.
+레벨2 미션의 목적은 React 학습이다.  
+여기서 떼어낸 `20`으로 CS지식과 용어에 대한 설명을 담은 블로그 포스팅, JS코어에 대한 개발서적 독서를 했다.  
+장기적으로는 몰라도, 레벨2 과정에는 큰 도움이 되지 않는 내용들이다.  
+이렇듯 `80`과 별개의 시간으로 사용한 `20`은 마치 `100`이 `80`이 된듯한 느낌을 주게 되었고, 곧 불안감으로 이어진 것이다.
 
 ## 이젠 80+20!🙆‍♂️
 
 > `80`을 **위한** `20`으로, `지금 당장 필요한 것`으로 채워보면 어떨까요?
 
-커피챗을 끝냄과 동시에 `준`의 추천으로 그 자리에서 바로 React 에러 처리 관련 문서를 읽었다.  
-`당장` 적용해 볼 수 있는 내용이었고, `나에게 필요한 부분`이었다.  
-그제서야 내가 마련한 `20`을 어떻게 사용해야 하는지 깨달을 수 있었다.
+커피챗을 끝냄과 동시에 `준`의 추천으로 그 자리에서 바로 **React 에러 처리 관련 문서를 읽었다.**(미션에서 한창 에러처리 관련 내용을 다루고 있었다.)
 
-포스팅이든 개발 서적 독서이든 간에 `지금 당장 필요한 것`이 아니면 와닿지 않는다.
+이는 `80`을 위한 `20`이고, `당장 필요한 것`이었다.  
+그제서야 내가 마련한 `20`을 어떻게 사용해야 하는지 깨달을 수 있었다.
 
 ## 이 글을 읽는 다른 크루들에게🎯
 
 미션에 너무 `과몰입` 하는 게 아닌가 고민하거나, 미션 외의 `다른 것`들도 챙겨가고 싶은 크루들이 분명 있을 것이다.  
 비중 조절을 결심했다면 `지금 당장 필요한 것`으로, `80`을 위한 `20`으로 채워보길 추천한다.
 
-이 글 만으로 충분한 설득이 됐는지는 모르겠다.  
-나 역시 아직 완성된 루틴이 아니기 때문에 비슷한 생각을 했거나, 하고 있는 크루들은 이야기 나눠 보고 싶으니 편하게 대화 신청해 주었으면 한다😀
+이 글 만으로 충분한 설명이 됐는지는 모르겠다.  
+나 역시 아직 완성된 루틴이 아니기에 비슷한 생각을 하고 있는 크루들은 이야기 나눠 보고 싶으니 편하게 대화 신청해 주었으면 한다😀
