피드백 반영

--- a/레벨2 글쓰기.md
+++ b/레벨2 글쓰기.md
@@ -2,7 +2,7 @@
 
 여기에 각자 다른 삶을 살고 있는 25명의 크루들이 있다.
 
-이 25명이 모여 어떤 하루를 만들어 가는지 관찰 일기를 작성해 보고자 한다.
+이 25명이 모여 어떤 하루를 만들어 가는지, 우리는 어떤 집단인지  관찰 일기를 작성해 보고자 한다. (모두의 특징을 다 담을 수 있도록 노력해 보았다.)
 
 </br>
 
@@ -40,7 +40,7 @@
 어떤 설명이 더 필요하겠는가.
 
 **써니**  글로를 통제할 수 있는 유일한 인간이다.
-(사실은 결이 비슷할 지도?)
+~~사실은 결이 비슷할 지도?~~
 
 **아크**  맨날 크루들 봐서 좋다고 발언했다는 제보가 들어왔다.
 (흠.. 그렇다기엔 이어폰 끼고 있는 시간이 굉장히 길어 보인다.)
@@ -52,7 +52,7 @@
 아, 맞다. "발로란트 초월자"
 
 **코비**  써니 曰 몽글몽글하다.
-(사실 무슨 말인지 아직 이해 못했다)
+(사실 무슨 말인지 아직 이해 못 했다.)
 
 **크롱**  멘델 曰 잘생겼다.
 
@@ -60,7 +60,7 @@
 
 **핑구**  그녀는.. 마곡에서 9호선을 타고 오는 강인한 사람이다.
 
-**하티**  잠을 정말 안 잔다. 좀 주무셔요..
+**하티**  잠에 못들어서 항상 잠이 부족한 상태이다.
 
 **해시**  숨은 능력자이다.
 슬랙에서 말 열심히 하세요.
