--- a/레벨2.md
+++ b/레벨2.md
@@ -188,24 +188,15 @@
 
 독서는 생각 없이 살아왔던 저에게 자기 발견이라는 중요한 씨앗을 낳았습니다.
 
-이를 키우고 실천하는 경험이 있는 사람들은 자기 계발서라는 이름으로 앞다투어 이야기하고 있습니다.
+이를 키워낸 경험이 있는 사람들은 자기 계발서라는 이름으로 그들의 이야기를 앞다투어 얘기하고 있습니다.
 
-이 사람들의 이야기도 제 세계로 확장하여 실천하였습니다.
+이 사람들의 이야기도 제 세계로 확장하였고, 구체적인 노력 방법을 배우며 실천하였습니다.
 
-덕분에 주체적인 삶을 위한 노력하는 법을 배웠고 하루하루를 의식하며 저의 이야기를 채워나가고 있습니다.
-
-<br>
-
-독서로부터 저는 의식적인 삶을 얻었습니다.
-
-매일 독서할 필요도 없습니다. 사실, 독서일 필요도 없습니다.
-
-스스로에게 물음을 줄 수 있고, 발견할 수 있는 것이라면 상관없습니다.
-
-저에게는 독서가 그러했습니다.
+주체적인 삶을 위해 하루하루를 의식하며 저의 이야기를 채워나가고 있습니다.
 
 <br>
 
-어언 4년간 독서를 시작한 이래로 독서로부터 얻은 것들은 인내와 의식 이외에도 많습니다.
 
-기회가 된다면, 저에 대해 더 자세한 이야기를 적어내고 싶네요.
+어언 4년간 독서를 시작한 이래로, 독서로부터 인내와 의식 이외에도 다양한 것들을 얻었습니다.
+
+기회가 된다면, 독서로부터 얻은 다양한 것들에 대해 자세한 이야기를 적어내고 싶네요.
