docs: 피드백 반영

--- a/레벨2/일상을 음미하는 법은 무엇일까요?.md
+++ b/레벨2/일상을 음미하는 법은 무엇일까요?.md
@@ -22,6 +22,7 @@ GPT가 말했다. "... 감각을 의식: 현재의 감각을 의식해 보세요
 
 주변의 소리에 집중해 보았다.
 
+```
 엽토: E죠? 이 사람 J는 확실해. 규칙적인 삶을 살고 있어 당신만의 루틴이 있어! EXXJ다. ENFJ다. 공감 능력이 좀 있어서 F. 그리고 S라고 했는데 S가 아니라고 하니까 N. 그래서 ENFJ 가겠습니다.
 
 클린: 틀렸습니다. 저는 ISTJ입니다.
@@ -35,22 +36,23 @@ GPT가 말했다. "... 감각을 의식: 현재의 감각을 의식해 보세요
 클린: J? 사실 관심이 없습니다. 당신이 궁금하지가 않아.
 
 엽토: 바가지가 없구먼?
+```
 
-앞엔 클린, 옆엔 엽토가 있어서 이들의 소리에 집중해 보았다. 이렇게 실시간으로 기록하는 방법은 현재에 집중할 순 있지만 비효율적이고 어려운 것 같다.
+앞엔 클린, 옆엔 엽토가 있어서 이들의 소리에 집중해 보았다. 이렇게 **실시간으로 기록하는 방법**은 현재에 집중할 순 있지만 비효율적이고 어려운 것 같다.
 
-글로가 말해준 방법을 시도해 볼까? 매 순간 느끼는 감정, 생각을 기록해 보는 건 어떨까? 어떤 감정이 떠오를 때 바로 메모장에 적어두는 것이다. 하지만 이 방법 또한 어려울 것 같다. 매 순간을 기록하는 것은 오히려 현재 하고 있는 것에 집중할 수 없을 것 같기 때문이다.
+글로가 말해준 방법을 시도해 볼까? **매 순간 느끼는 감정, 생각을 기록해 보는 건 어떨까?** 어떤 감정이 떠오를 때 바로 메모장에 적어두는 것이다. 하지만 이 방법 또한 어려울 것 같다. 매 순간을 기록하는 것은 오히려 현재 하고 있는 것에 집중할 수 없을 것 같기 때문이다.
 
-참새가 말해준 방법을 시도해 볼까? 매시간 회고하는 것이다. 사실 이 방법은 저번 주부터 시도 하였으나 휘몰아치는 일상에 번번이 잊어버려 실패
+참새가 말해준 방법을 시도해 볼까? **매시간 회고하는 것이다.** 사실 이 방법은 저번 주부터 시도 하였으나 휘몰아치는 일상에 번번이 잊어버려 실패
 하고 말았다.
 
 가람, 글로 그리고 참새와 얘기했던 '일상을 흘려보내지 않고 음미하는 법'의 공통점은 '기록'하는 것이다.
 
-결국 뻔하지만, 확실한 방법으로 하루하루 일상을 되짚어 보며 회고하는 것을 시도해 보기로 했다.
+결국 뻔하지만, 확실한 방법으로 **하루하루 일상을 되짚어 보며 회고하는 것**을 시도해 보기로 했다.
 
 ### 매일 회고 제가 한번 해보겠습니다.
 
 그동안 '매일 회고'를 아예 안 한 것은 아니다.
-실패했던 이유를 분석해 보자면 단지 '바쁘고 피곤해서'이다.
+실패했던 이유를 분석해 보자면 단지 '바쁘고 피곤해서'였다.
 캠퍼스에서 공부하다가 집에 도착해서 씻고 나면 자정이 넘어, 눕자마자 기절하는 것이 일상이었다.
 
 그래서 이번에는 집에 가는 길, 지하철에서 하루 회고를 작성해 보았고, '5월 14일부터 18일까지 5일간 매일 회고하기'에 성공했다.
@@ -69,6 +71,17 @@ GPT가 말했다. "... 감각을 의식: 현재의 감각을 의식해 보세요
 
 5. 크루들과의 일상을 마냥 흘려보내지 않고 글로나마 남겨둘 수 있어 만족스러웠다.
 
-바쁜 일상에 쫓겨 흘려보내는 일상이 아쉽다면 매일이 아니더라도 가끔씩 회고를 작성해 보면 어떨까?
+이렇게 일상을 음미하기 위한 '회고'의 장점은 충분히 알았다. 그렇다면 이것을 지속 가능한 습관으로 만들기 위해서는 어떻게 해야 할까?
+
+<figure align="center">
+   <img src="https://github.com/woowacourse/woowa-writing-5/assets/24777828/f8d029da-f285-4bde-8d49-1202e215dfb2" alt="한 줄 일기">
+   <figcaption>노션에 기록한 한 줄 일기, 그날의 기분을 이모지로 표현하고 소제목을 달아주었다.</figcaption>
+</figure>
+
+부담 없이 가볍게 다가갈 수 있도록 작은 목표를 설정하는 것이 중요하다. 나는 스스로 '**한 줄 일기**'라는 작은 과제를 부여했다. 이 작은 과제는 너무 많은 것을 하려고 하지 않아도 되기 때문에 부담감을 줄여, **시작을 쉽게** 만들어 주었다.
+
+테마는 '한 줄 일기'지만, 사실 글을 쓰기 시작하면, 자연스럽게 더 많은 글을 풀어내게 된다. 이렇게 시작한 결과, 어려운 과제를 해야 한다는 부담감 대신 가벼운 마음으로 회고를 지속할 수 있었다.
+
+바쁜 일상에 쫓겨 흘려보내는 일상이 아쉽다면 매일이 아니더라도 가끔씩 일상을 회고하며 기록해 보면 어떨까?
 
 모두가 달콤쌉싸름한 일상의 맛을 온전히 음미하는 하루를 보냈으면 하는 바람이다.
