docs: 문단 스타일 변경

--- a/레벨2/일상을 음미하는 법은 무엇일까요?.md
+++ b/레벨2/일상을 음미하는 법은 무엇일까요?.md
@@ -59,24 +59,20 @@ GPT가 말했다. "... 감각을 의식: 현재의 감각을 의식해 보세요
 
 회고를 작성하면서 좋은 점 5가지를 발견했다.
 
-1. 우선순위가 높은 일이 아니라 당장 눈앞의 일을 해결하는 것에 집착하고 있었다는 것을 깨닫고 내가 정말 해야 할 일에 집중할 수 있었다.
+> 1. 우선순위가 높은 일이 아니라 당장 눈앞의 일을 해결하는 것에 집착하고 있었다는 것을 깨닫고 내가 정말 해야 할 일에 집중할 수 있었다.
 
-2. 오늘 한 일들을 정리함으로써 정해진 일들을 다 끝내진 못했더라도 '오늘 그냥 시간을 버린 건 아니구나'라는 걸 알 수 있었다.
+> 2. 오늘 한 일들을 정리함으로써 정해진 일들을 다 끝내진 못했더라도 '오늘 그냥 시간을 버린 건 아니구나'라는 걸 알 수 있었다.
 
-3. KPT방식으로 회고하며, 반성할 점뿐만 아니라 잘한 점도 적기 때문에 '어제보다 나은 오늘'을 위한 동기부여를 얻을 수 있었다.
+> 3. KPT방식으로 회고하며, 반성할 점뿐만 아니라 잘한 점도 적기 때문에 '어제보다 나은 오늘'을 위한 동기부여를 얻을 수 있었다.</br> `Keep(현재 만족하고, 계속 이어갔으면 하는 점) | Problem(개선이 필요하다고 생각하는 점) | Try(Problem에 대한 해결책, 당장 실행할 수 있는 것)`
 
-   > Keep(현재 만족하고, 계속 이어갔으면 하는 점) | Problem(개선이 필요하다고 생각하는 점) | Try(Problem에 대한 해결책, 당장 실행할 수 있는 것)
+> 4. 글을 적으면서 띄어쓰기, 맞춤법 등을 찾아보게 되어서 국어 실력을 향상시킬 수 있었다.
 
-4. 글을 적으면서 띄어쓰기, 맞춤법 등을 찾아보게 되어서 국어 실력을 향상시킬 수 있었다.
-
-5. 크루들과의 일상을 마냥 흘려보내지 않고 글로나마 남겨둘 수 있어 만족스러웠다.
+> 5. 크루들과의 일상을 마냥 흘려보내지 않고 글로나마 남겨둘 수 있어 만족스러웠다.
 
 이렇게 일상을 음미하기 위한 '회고'의 장점은 충분히 알았다. 그렇다면 이것을 지속 가능한 습관으로 만들기 위해서는 어떻게 해야 할까?
 
-<figure align="center">
-   <img src="https://github.com/woowacourse/woowa-writing-5/assets/24777828/f8d029da-f285-4bde-8d49-1202e215dfb2" alt="한 줄 일기">
-   <figcaption>노션에 기록한 한 줄 일기, 그날의 기분을 이모지로 표현하고 소제목을 달아주었다.</figcaption>
-</figure>
+![한 줄 일기](https://github.com/woowacourse/woowa-writing-5/assets/24777828/f8d029da-f285-4bde-8d49-1202e215dfb2)
+_노션에 기록한 한 줄 일기, 그날의 기분을 이모지로 표현하고 소제목을 달아주었다._
 
 부담 없이 가볍게 다가갈 수 있도록 작은 목표를 설정하는 것이 중요하다. 나는 스스로 '**한 줄 일기**'라는 작은 과제를 부여했다. 이 작은 과제는 너무 많은 것을 하려고 하지 않아도 되기 때문에 부담감을 줄여, **시작을 쉽게** 만들어 주었다.
 
