--- a/레벨2.md
+++ b/레벨2.md
@@ -30,19 +30,19 @@
 
 ### **더 바디샵 화이트 머스크**
 
-앞선 그라펜 아쿠아보가 여름과 정말 잘 어울리는 향수였다면 더 바디샵 화이트 머스크는 가을, 겨울에 정말 잘 어울리는 향수다. 노트에 변화가 전혀 없이 처음 뿌렸던 그 향 그대로 쭉 유지된다. 머스크향의 특성상 향이 멀리 퍼지지 않아 향수를 정말 막 뿌려도 크게 부담되지 않는다. 향은 머스크 향과 가까우며 중성적인 향이 난다.
+앞선 그라펜 아쿠아보가 여름과 정말 잘 어울리는 향수였다면 더 바디샵 화이트 머스크는 가을, 겨울에 정말 잘 어울리는 향수다. 향의 변화가 전혀 없이 처음 뿌렸던 그 향 그대로 쭉 유지된다. 머스크향의 특성상 향이 멀리 퍼지지 않아 향수를 정말 막 뿌려도 크게 부담되지 않는다. 향은 머스크 향과 가까우며 중성적인 향이 난다.
 
   <br>
 
 ### **클린 웜 코튼**
 
-비누 냄새로 많이 알려져 있는 향수이다. 앞서 소개했던 더 바디샵 화이트 머스크와 비슷하게 노트의 변화가 전혀 없이 처음 뿌렸던 향 그대로 쭉 유지된다. 발향력, 지속력 모두 강해서 조금만 뿌려도 남들이 향수 뿌렸냐고 물어볼 정도이다. 상큼한 향이 주로 나서인지 가을, 겨울보다는 여름에 어울리는 향수이다.
+비누 냄새로 많이 알려져 있는 향수이다. 앞서 소개했던 더 바디샵 화이트 머스크와 비슷하게 향의 변화가 전혀 없이 처음 뿌렸던 향 그대로 쭉 유지된다. 발향력, 지속력 모두 강해서 조금만 뿌려도 남들이 향수 뿌렸냐고 물어볼 정도이다. 상큼한 향이 주로 나서인지 가을, 겨울보다는 여름에 어울리는 향수이다.
 
   <br>
 
 ### **그랑핸드 마린 오키드**
 
-여행을 갔다가 좋은 향에 이끌려 들렸던 프래그런스 전문 매장에서 가장 마음에 들었던 두 향수였다. 인사동에 있는 그랑핸드 매장에서 처음 이 향을 맡아 보았고, 그랑핸드 홍대 매장에 두번 더 방문해보며 있는 향을 다 맡아보았지만 그래도 이 향이 가장 좋아 구매한 향수이다. 노트 변화가 거의 없으며 기분좋은 비누향이 난다. 더프트 앤 도프트의 소피소피와 매우 유사한 향이 나는데 올리브영에 있는 향이니 한번 맡아보고 괜찮다면 그랑핸드 매장에 들러보는 것을 추천한다.
+여행을 갔다가 좋은 향에 이끌려 들렸던 프래그런스 전문 매장에서 가장 마음에 들었던 두 향수였다. 인사동에 있는 그랑핸드 매장에서 처음 이 향을 맡아 보았고, 그랑핸드 홍대 매장에 두번 더 방문해보며 있는 향을 다 맡아보았지만 그래도 이 향이 가장 좋아 구매한 향수이다. 향의 변화가 거의 없으며 기분좋은 비누향이 난다. 더프트 앤 도프트의 소피소피와 매우 유사한 향이 나는데 올리브영에 있는 향이니 한번 맡아보고 괜찮다면 그랑핸드 매장에 들러보는 것을 추천한다.
 
   <br>
 
