--- a/레벨2.md
+++ b/레벨2.md
@@ -2,61 +2,43 @@
 
 ## 탑 노트
 
-누구나 어떤 향을 맡았을 때 과거의 기억을 떠올리게 된 경험을 해본 적이 한번쯤 있을 것이다. 굳이 기억하려 하지 않아도 행복했던 여행의 기억, 특별한 기념일의 추억도 향이 대신 간직해준다. 그래서 향이 나는 무언가가 좋았다.
-
-<br>
+누구나 어떤 향을 맡았을 때 과거의 기억을 떠올리게 된 경험을 해본 적이 한 번쯤 있을 것이다. 굳이 기억하려 하지 않아도 행복했던 여행의 기억, 특별한 기념일의 추억도 향이 대신 간직해 준다. 그래서 향이 나는 무언가가 좋았다.
 
 ## 미들 노트
 
-향이 좋아 그동안 정말 많은 방식으로 향을 접했다. 대중적인 향수들을 시향하기도 하고, 향수 공방에 가서 직접 향수를 만들어보기도 하고, 독자적인 향수를 만드는 매장을 찾아다니기도 했다. 자연스럽게 갖고 있는 향수도 많아지고, 한번쯤 다른 사람들에게 내가 경험했던 향들을 소개해보고 싶다는 생각이 들었다. 이번 글쓰기 미션을 기회로 한번 내가 지금 갖고 있는 향들을 소개해보고자 한다.
+향이 좋아 그동안 정말 많은 방식으로 향을 접했다. 대중적인 향수들을 시향하기도 하고, 향수 공방에 가서 직접 향수를 만들어 보기도 하고, 독자적인 향수를 만드는 매장을 찾아다니기도 했다. 자연스럽게 갖고 있는 향수도 많아지고, 한 번쯤 다른 사람들에게 내가 경험했던 향들을 소개해 보고 싶다는 생각이 들었다. 이번 글쓰기 미션을 기회로 한번 내가 지금 갖고 있는 향들을 소개해 보고자 한다.
 
 ### **CK ONE**
 
-처음으로 샀던 향수였다. 대중적으로 가장 많이 사용하는 유명한 향수인 만큼 호불호가 정말 적은 향이다. 첫 향은 조금 톡 쏘는 상큼한 향이 나지만 시간이 지날수록 향이 부드러워지다가 마지막에 기분좋은 향나무 향이 남는다.
-
-  <br>
+처음으로 샀던 향수였다. 대중적으로 가장 많이 사용하는 유명한 향수인 만큼 호불호가 정말 적은 향이다. 첫 향은 조금 톡 쏘는 상큼한 향이 나지만 시간이 지날수록 향이 부드러워지다가 마지막에 기분 좋은 향나무 향이 남는다.
 
 ### **버버리 터치 포맨**
 
-선물 받아 처음 써봤지만 생각보다 무난하고 매일 쓰기에도 좋은 향이었다. 앞선 CK ONE은 중성적인 향이었다면 버버리 터치 포맨은 남성적인 느낌이 더 강한 향이다. 첫 향은 살짝 쌉싸름하면서 달달한 향이 나다가 CK ONE처럼 시간이 지날수록 향이 부드러워진다.
-
-  <br>
+선물 받아 처음 써봤지만, 생각보다 무난하고 매일 쓰기에도 좋은 향이었다. 앞선 CK ONE은 중성적인 향이었다면 버버리 터치 포맨은 남성적인 느낌이 더 강한 향이다. 첫 향은 살짝 쌉싸름하면서 달달한 향이 나다가 CK ONE처럼 시간이 지날수록 향이 부드러워진다.
 
 ### **그라펜 아쿠아보**
 
 여름에 정말 잘 어울리는 향수다. 처음 뿌리면 상큼한 시트러스 계열의 향이 느껴지다가 시간이 지날수록 그린티 계열 특유의 향이 난다. 남는 잔향이 개인적으로 가장 좋아하는 CK ONE의 잔향과 매우 유사해 여름에 자주 뿌리고 다니는 향이다.
 
-  <br>
-
 ### **더 바디샵 화이트 머스크**
 
 앞선 그라펜 아쿠아보가 여름과 정말 잘 어울리는 향수였다면 더 바디샵 화이트 머스크는 가을, 겨울에 정말 잘 어울리는 향수다. 향의 변화가 전혀 없이 처음 뿌렸던 그 향 그대로 쭉 유지된다. 머스크향의 특성상 향이 멀리 퍼지지 않아 향수를 정말 막 뿌려도 크게 부담되지 않는다. 향은 머스크 향과 가까우며 중성적인 향이 난다.
 
-  <br>
-
 ### **클린 웜 코튼**
 
-비누 냄새로 많이 알려져 있는 향수이다. 앞서 소개했던 더 바디샵 화이트 머스크와 비슷하게 향의 변화가 전혀 없이 처음 뿌렸던 향 그대로 쭉 유지된다. 발향력, 지속력 모두 강해서 조금만 뿌려도 남들이 향수 뿌렸냐고 물어볼 정도이다. 상큼한 향이 주로 나서인지 가을, 겨울보다는 여름에 어울리는 향수이다.
-
-  <br>
+비누 냄새로 많이 알려진 향수이다. 앞서 소개했던 더 바디샵 화이트 머스크와 비슷하게 향의 변화가 전혀 없이 처음 뿌렸던 향 그대로 쭉 유지된다. 발향력, 지속력 모두 강해서 조금만 뿌려도 남들이 향수 뿌렸냐고 물어볼 정도이다. 상큼한 향이 주로 나서인지 가을, 겨울보다는 여름에 어울리는 향수이다.
 
 ### **그랑핸드 마린 오키드**
 
-여행을 갔다가 좋은 향에 이끌려 들렸던 프래그런스 전문 매장에서 가장 마음에 들었던 두 향수였다. 인사동에 있는 그랑핸드 매장에서 처음 이 향을 맡아 보았고, 그랑핸드 홍대 매장에 두번 더 방문해보며 있는 향을 다 맡아보았지만 그래도 이 향이 가장 좋아 구매한 향수이다. 향의 변화가 거의 없으며 기분좋은 비누향이 난다. 더프트 앤 도프트의 소피소피와 매우 유사한 향이 나는데 올리브영에 있는 향이니 한번 맡아보고 괜찮다면 그랑핸드 매장에 들러보는 것을 추천한다.
-
-  <br>
+여행을 갔다가 좋은 향에 이끌려 들렸던 프래그런스 전문 매장에서 가장 마음에 들었던 두 향수였다. 인사동에 있는 그랑핸드 매장에서 처음 이 향을 맡아 보았고, 그랑핸드 홍대 매장에 두 번 더 방문해 보며 있는 향을 다 맡아보았지만 그래도 이 향이 가장 좋아 구매한 향수이다. 향의 변화가 거의 없으며 기분 좋은 비누향이 난다. 더프트 앤 도프트의 소피소피와 매우 유사한 향이 나는데 올리브영에 있는 향이니 한번 맡아보고 괜찮다면 그랑핸드 매장에 들러보는 것을 추천한다.
 
 ### **그랑핸드 수지살몬**
 
-나는 마린 오키드 향이 가장 좋았지만 여자친구가 고른 가장 좋은 향은 수지살몬이었다. 마린 오키드가 다소 남성적인 향이라면 수지살몬은 여성적인 향에 치우친 향기이다. 그랑핸드에서 가장 대표적인 향 중 하나이며, 호불호 없이 매일 사용할 수 있을 향이다. 올리브영에 있는 멈칫 바디미스트 마젠타 레이디와 향이 매우 유사하므로 혹시 관심이 있는데 그랑핸드 매장에 찾아가기 귀찮다면 근처 올리브영에 가서 시향해보는 것을 추천한다.
-
-  <br>
+나는 마린 오키드 향이 가장 좋았지만, 여자친구가 고른 가장 좋은 향은 수지살몬이었다. 마린 오키드가 다소 남성적인 향이라면 수지살몬은 여성적인 향에 치우친 향기이다. 그랑핸드에서 가장 대표적인 향 중 하나이며, 호불호 없이 매일 사용할 수 있을 향이다. 올리브영에 있는 멈칫 바디미스트 마젠타 레이디와 향이 매우 유사하므로 혹시 관심이 있는데 그랑핸드 매장에 찾아가기 귀찮다면 근처 올리브영에 가서 시향해보는 것을 추천한다.
 
 ### **Body Fantasies His Clean Laundary**
 
 앞서 소개한 다른 향들은 모두 향수였는데 이 향은 유일하게 바디미스트이다. 바디 미스트인데도 향의 지속력이나 발향력이 정말 좋아서 식당에 갔다가 음식 냄새가 옷에 배었을 때 주로 사용한다. 향 자체는 개인적으로 정말정말 좋아하는 향이고, 주변 사람들의 말을 빌리면 갓 샤워하고 나왔을 때의 상쾌한 향이라고 한다.
-
-  <br>
 
 ## 베이스 노트
 
