docs: 피드백 반영

--- a/이 코드 왜 이렇게 짰어요?.md
+++ b/이 코드 왜 이렇게 짰어요?.md
@@ -16,9 +16,9 @@
 ### - 작성한 이유에 대해 충분히 고민하고 답변하기
 
 이도 저도 아닌 답변 대신, 내가 왜 이렇게 작성했는지 돌아보고 답변하려 노력했다.  
-다음은 `React 컴포넌트 렌더링 테스트 케이스`에 대해 리뷰어와 나눈 대화이다.
-
----
+다음은 `컴포넌트 렌더링 테스트 케이스`에 대해 리뷰어와 나눈 대화이다.  
+`화면에 RestaurantListItem을 렌더링한다.`라는 테스트 케이스를 작성했고,  
+작성한 이유에 대해 리뷰어에게 설명하는 과정을 거쳤다.
 
 `리뷰어)` 화면에 지구당 식당을 보여준다. 는 어떨까요?  
 저는 테스트에 쓰일 말은 도메인 지식이 없는 누군가가 봤을 때도 이해가 가야 한다고 생각하는 입장인데, 유스의 의견도 궁금합니다!
@@ -36,8 +36,6 @@
 
 새로운 기술을 학습하여 적용하는 경우, 어떤 문제를 해결하기 위해 사용했는지에 초점을 맞추어 고민했다.  
 다음은 `React`의 `Context API`를 학습하여 적용한 후 리뷰어와 나눈 대화이다.
-
----
 
 `리뷰어)` 페이지 내의 카드 등록 폼이 있는 페이지에 `BottomSheet`를 추가하는 방법도 있었을 것 같은데, `props` 대신에 `Context`를 사용하신 이유도 궁금합니당~!
 
@@ -62,12 +60,14 @@
 내가 해결하고자 하는 문제에 적합한 해결 방안인지, 개선할 수 있는 부분이 있는지, GPT가 동문서답을 하고 있지는 않은지.  
 별 생각 없이 복사 + 붙여넣기하지 않고, 하나하나 의심해보고 합당한 근거를 이끌어낸 후 적용하도록 사고의 흐름을 바꾸었다.
 
+---
+
 ### - 건설적인 대화
 
-비판적 수용은 건설적인 대화의 기점이 될 수 있다.
-다음은 `무작위 숫자의 주입 방식`에 대해 리뷰어와 나눈 대화이다.
-
----
+비판적 수용은 건설적인 대화의 기점이 될 수 있다.  
+다음은 `무작위 숫자의 주입 방식`에 대해 리뷰어와 나눈 대화이다.  
+`자동차 경주 게임`의 핵심 기능인 `무작위 숫자를 기반으로 자동차를 전진하는 기능`을 쉽게 테스트할 수 있도록,  
+무작위 숫자를 외부에서 주입하는 방식을 선택했다.
 
 `리뷰어)` 여기 사용처에서 메뉴얼하게 `random number`를 넣어주는 게 좋은 방법인지 고민입니다~  
 앞으로 갈지 말지 결정하는 건 `Car`가 알아서 하고(즉, `car`의 `Progress` 정책은 `car`만 알고있고) 여기서는 고상하게 `car`! `progress`해!!  
@@ -94,10 +94,10 @@
 `리뷰어)` 기본값 매개변수를 통해 테스트에 용이하도록 만든 아이디어는 괜찮아 보입니다😁  
 덕분에 random 값의 `min`, `max`와 `conditionNumber`의 기준값을 한 곳에서 정의할 수 있어 더 좋아보이네요!
 
----
-
 만약 내 의견을 제시하는 과정 없이 리뷰어의 피드백을 맹목적으로 수용했다면, 생각지 못했던 문제점들을 발견하지 못하고 지나갔을 것이다.  
 또한 더 나은 해결 방법에 대해 고민하는 과정 또한 없었을 것이다.
+
+---
 
 ### - "리뷰어한테 받은 피드백인데~"
 
