--- a/별난_게_아니다.md
+++ b/별난_게_아니다.md
@@ -27,13 +27,11 @@
 
 레벨2가 시작하고 얼마 되지 않아서 스터디 참여 제안을 받았다. 스터디의 주요 활동은 레벨 인터뷰에서의 면접을 미션 단위로 진행하는 것이었다.
 
-스터디를 통해 내가 얻을 수 있는 점이 무엇이 있나 생각해 봤다. 면접 상황에서의 소프트 스킬을 키울 수 있고, 스터디 준비를 하며 내가 공부한 내용을 다시 한 번 정리할 수 있다는 이점이 기대됐다.
-
-그리고 마침 다른 사람들은 이런저런 좋은 스터디를 하는 것처럼 느껴져서 ‘나도 스터디를 해야 하나’ 싶은 조바심을 느끼던 터였다. 
+소프트 스킬을 단련함에 있어서 충분히 유익한 스터디라고 생각했다. 그리고 마침 다른 사람들은 이런저런 좋은 스터디를 하는 것처럼 느껴져서 ‘나도 스터디를 해야 하나’ 싶은 조바심을 느끼던 터였다. 
 
 그런 와중에 스터디 제안을 받으니 이 스터디가 다신 찾아오지 않을 것만 같은 기회로 느껴졌고, 덥석 참여하겠다고 결정했다.
 
-이후에 스터디를 진행하며 느낀 점은 내가 세웠던 레벨2 학습 목표와 맞지 않는다는 것이었다. 내가 세웠던 **얕고 넓게** 하자는 학습 목표와는 다르게, 면접 형식의 스터디는 어느 정도의 깊은 지식을 요구하기 때문이었다.
+하지만 정작 스터디를 진행하며 느낀 점은 내가 세웠던 레벨2 학습 목표와 맞지 않는다는 것이었다. 내가 세웠던 **얕고 넓게** 하자는 학습 목표와는 다르게, 면접 형식의 스터디는 어느 정도의 깊은 지식을 요구하기 때문이었다.
 
 내 학습 방향과 맞는 스터디인지 충분히 고민해보고 신중히 결정할 수 있었지만, 급한 마음에 신중하게 선택하지 못했다고 생각한다.
 
@@ -50,11 +48,11 @@
 
 어떠한 형태의 감정이든, 그게 부정적일지라도 웬만해선 본인만 느끼는 감정이 아닐 것이다. 
 
-미션을 진행하다 너무 뒤처지는 것 같아서 막막할 때면 PR을 확인해보는 것도 추천한다. 1단계에 머물러 있는 사람이 나만 있는 것은 아니란 것을 알 수 있을 것이다. 그리고 2단계를 진행하며 앞서 나가고 있는 사람은 생각보다 적다는 것도 알 수 있을 것이다.
+미션을 진행하다 너무 뒤처지는 것 같아서 막막할 때면 미션 저장소의 PR을 확인해보는 것도 추천한다. 1단계에 머물러 있는 사람이 나만 있는 것은 아니란 것을 알 수 있을 것이다. 그리고 2단계를 진행하며 앞서 나가고 있는 사람은 생각보다 적다는 것도 알 수 있을 것이다.
 
-## 등산
+## 우리는 등산하는 중이다
 나보다 산을 일찍 오르기 시작한 사람은 지금의 나보다 높은 지점에 서 있을 것이다. 
 
-이러한 당연한 사실에 사로잡혀 그 사람을 부러워하고 나 자신을 깎아내리지 말자.
+이런 당연한 사실에 사로잡혀, 그 사람을 부러워하고 나 자신을 깎아내리지 말자.
 
-대신 내가 완등하고자 했던 꼭대기를 바라보며, 정진하는 데에 집중하는 것은 어떨까?
+대신, 내가 완등하고자 했던 꼭대기를 바라보며 정진하는 데에 집중하는 것은 어떨까?
