--- a/level2/2단계.md
+++ b/level2/2단계.md
@@ -11,7 +11,7 @@
 
 > “선수들은 주목받아야 하고, 관심받아야 합니다. 그걸 통해 “팬”의 존재를 인식할 줄 아는 사람이 프로 선수가 될 수 있다고 생각해요”
 
-&nbsp; 두 팔 벌려 환영해 준 스포츠실의 흔쾌한 허락, 그리고 이곳저곳 긁어모은 부원들과 함께 축구부 프런트를 창설했다. 우리는 선수들의 경기가 열리는 전국을 돌아다녔다. 매 경기 선수들의 인터뷰 기사를 쓰고, 경기 영상을 촬영하고, 카드 뉴스와 인터뷰 영상을 만들고 편집해 올렸다.
+&nbsp; 두 팔 벌려 환영해 준 스포츠실의 흔쾌한 허락, 그리고 이곳저곳 긁어모은 부원들과 함께 축구부 프런트를 창설했다. 우리는 선수들의 경기가 열리는 전국을 돌아다녔다. 매 경기 선수들의 인터뷰 기사를 쓰고, 경기 영상을 촬영하고, 카드 뉴스와 인터뷰 영상을 만들어 올렸다.
 
 &nbsp; 꾸준한 활동은 사람들의 관심을 불러일으켰다. 학교 홍보팀에서 먼저 연락이 왔다. 우리가 만든 영상물을 공식 홍보 컨텐츠로 활용하고 싶다는 제의였다. 외부 기자들이 선수에 접촉할 때 연결해 주거나, 에이전시에 선수들의 영상을 제공하기도 했다. 감독님, 코치님들에게 하이라이트와 경기 영상을 제공하며 전력 상승에 도움을 주기도 했다. 점점 축구부와 우리는 한 팀이 되어가고 있었다.
 
