--- a/별난_게_아니다.md
+++ b/별난_게_아니다.md
@@ -7,7 +7,7 @@
 
 그중에서 가장 크게 자리 잡은, 그리고 자주 느꼈던 감정은 조바심이다.
 
-## Why? 조바심 편
+## 조바심은 어디에서 생겨날까?
 ‘우아한테크코스 합격을 진심으로 축하합니다!’ 
 
 우리는 4주간의 프리코스와 최종 코딩 테스트를 이겨내고 합격했다. 그토록 원하던 우테코에 합류하게 되었는데, 어째서 조바심이 느껴지는 걸까?
