축구부 프런트 설명

--- a/level2/2단계.md
+++ b/level2/2단계.md
@@ -7,7 +7,7 @@
 
 &nbsp; 선수들의 입에서 나온 말은 사뭇 이질적이었다. 응당 즐기고 축하받아야 할 성취를 온전히 느끼지 못하는 그들을 보며 가슴 속에 무언가가 끓어올랐다.
 
-&nbsp; 다른 여러 학교에서 프로 스포츠팀들의 프런트 구조를 벤치마킹하여 운영하는 학생 프런트 단체가 있음을 알게 되었다. 우리도 만들어 보자. 함께 취재 활동을 하던 동료와 기획안을 들고 무작정 학교 스포츠실로 찾아갔다. 왜 이러한 문화가 우리도 필요한지 두어 시간에 걸쳐 역설했다.
+&nbsp; 다른 몇 학교에서 프로 스포츠팀들의 프런트 구조를 벤치마킹하여 운영하는 학생 프런트 단체가 있음을 알게 되었다. 축구부 선수들을 대상으로 다양한 컨텐츠를 만들어, sns나 인터넷 기사 등 다양한 플랫폼을 통해 꾸준히 미디어에 노출시키는 단체였다. 그래 우리도 만들어 보자. 함께 취재 활동을 하던 동료와 기획안을 들고 무작정 학교 스포츠실로 찾아갔다. 왜 이러한 문화가 우리도 필요한지 두어 시간에 걸쳐 역설했다.
 
 > “선수들은 주목받아야 하고, 관심받아야 합니다. 그걸 통해 “팬”의 존재를 인식할 줄 아는 사람이 프로 선수가 될 수 있다고 생각해요”
 
