내용 설명 추가

--- a/level2/2단계.md
+++ b/level2/2단계.md
@@ -15,7 +15,9 @@
 
 &nbsp; 꾸준한 활동은 사람들의 관심을 불러일으켰다. 학교 홍보팀에서 먼저 연락이 왔다. 우리가 만든 영상물을 공식 홍보 컨텐츠로 활용하고 싶다는 제의였다. 외부 기자들이 선수에 접촉할 때 연결해 주거나, 에이전시에 선수들의 영상을 제공하기도 했다. 감독님, 코치님들에게 하이라이트와 경기 영상을 제공하며 전력 상승에 도움을 주기도 했다. 점점 축구부와 우리는 한 팀이 되어가고 있었다.
 
-&nbsp; 일 년 정도 활동하던 무렵, 나는 스포츠 기자라는 꿈을 내려놓게 되었다. 하지만 이 활동을 그만두고 싶지는 않았다. 재미라는 순수한 가치와 함께 이 문화를 즐겼다. 다만 의문이 들었다. 내 꿈과 함께하지 않는 곳에 나는 왜 존재하고 있는가?
+&nbsp; 일 년 정도 활동하던 무렵, 나는 스포츠 기자라는 꿈을 내려놓게 되었다. 나는 세상에 내 목소리로 영향을 전달하고 싶었다. 하지만 내가 열심히 전달하려는 문장과 메세지가 "편집"을 담당하는 사람의 의도로 변경되는 모습을 보면서, 그 목적은 기자라는 역할로 실현할 수 없어 보였다(그것 또한 그 사람의 역할이니 비난하지는 않는다).
+
+&nbsp; 하지만 이 활동을 그만두고 싶지는 않았다. 재미라는 순수한 가치와 함께 이 문화를 즐겼다. 다만 의문이 들었다. 내 꿈과 함께하지 않는 곳에 나는 왜 존재하고 있는가?
 
 &nbsp; 그렇게 이 년의 시간이 흘렀다. 우리와 함께했던 수많은 선수가 각자의 길을 찾아 떠났다. 누군가는 프로 무대에, 누군가는 새로운 인생을 살게 되었다. 그리고 나 역시 이곳을 떠나 새로운 꿈을 찾게 되었다.
 
