fix: 도치 피드백 반영

--- a/레벨2_몰입.md
+++ b/레벨2_몰입.md
@@ -49,16 +49,19 @@
 재밌었는데.
 나에게 뮤지컬은 처음으로 몰입한 행위, 첫사랑 같은 것이다.
 
----
+## 첫번째 몰입, 그 이후
 
 아쉽게도, 재능도 없었고 부모님께서도 조금 더 학업의 의무를 다하기를 바라셔서 고등학교에 가면서 뮤지컬의 꿈은 접게 되었다.
 
 하지만 몰입을 경험하고 난 뒤로는 별로 반항하고 싶지 않았다.
 내 반항은 몰입을 위한 방황이었는데, 마음만 먹으면 몰입할 것을 금방 만들 수 있을 것 같았기 때문이다.
 그렇게, 가장 눈앞에 있는 가장 만만한 것인 학교 공부에 몰입하기를 도전했던 것 같다.
+그렇게 십대 마지막은 공부에 몰입하는 것으로 채워볼 수 있었다.
 
-지금까지 내가 좋아했던 것들은 전부 다 그랬다. 프로그래밍도 별반 다르지 않았다.
-내가 프로그래밍을 계속해야겠다고 느꼈던 것은 그리 특별한 계기가 아니었다.
+스무살이 되었다.
+고등학교 때와 달리 주변에는 온통 새로운 사람, 그리고 새로운 재미가 있었다.
+노는 것에 몰입했던 거라고 볼 수 있다.
+그런데 이 시점에 코로나 팬대믹이 일어나고, 갑자기 비대면으로 학교 생활을 하게 되었다.
 
 인생 최고 `노잼` 시기였던 스물한 살의 여름.
 원격으로 학교 수업을 듣곤 했는데 책상에 앉기만 하면 눕고 싶고
@@ -69,7 +72,7 @@
 앞으로 무슨 폭풍이 일어날지도 모르고 그냥 다시 잤다.
 
 해커톤은 3일밖에 주어지지 않았고, 아무 경험도 없던 우리에게는 더 짧은 시간이었다.
-시간 내에 어떻게든 굴러가게 만들기 위해서는 날 혹사해야 했지만 그런데도 즐거웠던 것 같다.
+시간 내에 어떻게든 굴러가게 만들기 위해서는 날 혹사해야 했지만 그런데도 즐거웠던 것 같다. 
 
 
 > 자기효능감
@@ -86,27 +89,11 @@
 
 ---
 
-하지만 지금도 내가 몰입할 행위를 영영 잃어버릴까 무섭다.
-
-솔직히 난 우테코 생활 중에도 몰입하지 못하는 때가 있었고
-그럴 때마다 난 한없이 작아졌다.
-그럴 땐 생각을 바꿔야 한다.
-
-흘러가는 대로 살아가다가도,
-우연히 만나는 모든 것들에 몰입이라는 도전장을 내밀던 나였기에
-
-`나라면 다시금 몰입할 수 있을 거야`
-
-믿어보는 것이다.
-
----
-
-많은 사람이 몰입이 좋다는 사실에 고개를 끄덕이는 이유가
+많은 사람이 몰입이 좋다는 사실에 고개를 끄덕이는 이유가영
 몰입 이후의 결과물, 결과물이 주는 행복감을 떠올리기 때문이기도 하다.
 하지만 모든 몰입이 다 성공적일 수 없고, 만족스러울 수도 없다.
 긍정적인 피드백을 받지 못한 우리는 다시 몰입하기 힘들어질 수 있다.
 
-또 다른 문제. 나는 성격상 그 어떤 것도 평생을 최선을 다해 몰입하기는 쉽지 않을 것 같다.
 그렇다면, 몰입이 어려워질 때 어떻게 극복해낼 것인가?
 
 난 내가 몰입할 수 있는 다른 것들을 만들어보려고 한다.
