fix: 마지막 소제목

--- a/레벨2_몰입.md
+++ b/레벨2_몰입.md
@@ -72,7 +72,7 @@
 앞으로 무슨 폭풍이 일어날지도 모르고 그냥 다시 잤다.
 
 해커톤은 3일밖에 주어지지 않았고, 아무 경험도 없던 우리에게는 더 짧은 시간이었다.
-시간 내에 어떻게든 굴러가게 만들기 위해서는 날 혹사해야 했지만 그런데도 즐거웠던 것 같다. 
+시간 내에 어떻게든 굴러가게 만들기 위해서는 날 혹사해야 했지만 그런데도 즐거웠던 것 같다.
 
 
 > 자기효능감
@@ -87,9 +87,9 @@
 다시 몰입할 것을 찾았다는 흥분감과 안도감을 가장 최근 느낀 것이 이때였고,
 다가오지도 않은 미래에 설렘을 느꼈고, 그렇게 여기까지 왔다.
 
----
+## 지속가능한 몰입
 
-많은 사람이 몰입이 좋다는 사실에 고개를 끄덕이는 이유가영
+많은 사람이 몰입이 좋다는 사실에 고개를 끄덕이는 이유가
 몰입 이후의 결과물, 결과물이 주는 행복감을 떠올리기 때문이기도 하다.
 하지만 모든 몰입이 다 성공적일 수 없고, 만족스러울 수도 없다.
 긍정적인 피드백을 받지 못한 우리는 다시 몰입하기 힘들어질 수 있다.
