--- a/레벨2.md
+++ b/레벨2.md
@@ -9,7 +9,9 @@
 
 어렸을 적 좀비영화를 보면서 상상했다. '죽었지만 죽지 않은 것', '이성적인 생각은 없어지고 지극히 짐승같은 본능만 남은 사람의 형태' 그 당시 내가 정의한 좀비였다. 
 왜인지 모르게 나의 흥미를 끌었다. 
-자연스럽게 바이러스에 궁금증이 생겼고 이 궁금증은 나의 대학진학에도 영향을 끼쳤다. 
+자연스럽게 바이러스에 궁금증이 생겼다. 
+'어떻게 바이러스가 만들어지고, 어떻게 생명체를 감염시키는 걸까?'
+이러한 궁금증은 나의 대학진학에도 영향을 끼쳤다. 
 사실 교육, 컴퓨터 공학 등 여러가지 분야에 관심이 있었으나 대학 진학에 있어 모든 과를 선택할 수 없으니, 생명공학부에 진학하기로 마음을 굳혔다.
 
  <br/>
@@ -23,6 +25,7 @@
 이러한 생활을 더 할 수 없다고 생각하여 입대를 했다. 전역하면 무엇을 해야할지에 대해 고민을 많이했다. 
 고심 끝에 `옛날에 관심있었던 컴퓨터에 대해 한 번 공부해보자`라는 생각과 함께 C언어 책을 하나 샀다. 컴퓨터에 대해 문외한이었지만, C언어로 연습문제를 풀 때 고민하는 과정이 너무 재밌었다. 
 컴퓨터를 쓰지 못했기에 공책에 손코딩을 하며 컴퓨터공학과인 동기에게 물어보기도 하였다.
+손으로 써서 들여쓰기를 잘 지키진 못했지만, 생각의 흐름을 코드로 표현하는 과정이 내겐 새로운 경험이었다.
 
 <br/>
 
@@ -44,5 +47,6 @@
 
 어떤 분야로 더 나아갈지 선택을 해야했다. 컴퓨터 전반적인 강의를 많이 들었지만, 다중 전공의 학과가 보안과 관련된 학과인지라 보안관련된 내용을 많이 배웠다. 
 보안관련한 대학원에 진학할까도 생각해봤지만, 나의 흥미에 대한 확신이 없었으며 공부를 더하기 보다는 사회로 나가고 싶었다. 
-여러 분야들을 탐색해보다가 백엔드 분야를 접하게 되었다.실질적으로 어떤 서비스의 비지니스적인 부분을 개발한다는것이 끌려 백엔드 개발자로 진로를 정하게 되었다. 
+여러 분야들을 탐색해보다가 백엔드 분야를 접하게 되었다. 실질적으로 어떤 서비스의 비지니스적인 부분을 개발한다는것이 끌려 백엔드 개발자로 진로를 정하게 되었다.
+도메인은 현재 제일 관심이 있는 인증쪽에 몸 담고싶다.
 그리고 우아한 테크코스를 인터넷으로 접하게 되었는데, 운이 좋게도 합격하여 백엔드 개발자로의 나의 길은 끝나지 않고 순항중이다.
