docs: 불필요한 문장 제거

--- a/어떤 개발자와 같이 일하고 싶나요?.md
+++ b/어떤 개발자와 같이 일하고 싶나요?.md
@@ -65,6 +65,6 @@
 
 <br>
 
-개인적으로 같이 일하고 싶은 개발자는 '**일할 때 편한 개발자가 같이 일하고 싶은 개발자**'라고 생각한다. 우아한테크코스를 하면서 스토리북에 대해 알게 됐는데, 이 스토리북이 협업에 많은 도움을 줄 것 같다는 생각이 들었다. 그래서 스토리북을 잘하고 싶다는 욕심이 생겼다. 잘 이용하게 되면 디자이너 등 비개발자들과 편하게 의사소통하며 일할 수 있을 것 같다. 
+개인적으로 같이 일하고 싶은 개발자는 '**일할 때 편한 개발자**'라고 생각한다. 우아한테크코스를 하면서 스토리북에 대해 알게 됐는데, 이 스토리북이 협업에 많은 도움을 줄 것 같다는 생각이 들었다. 그래서 스토리북을 잘하고 싶다는 욕심이 생겼다. 잘 이용하게 되면 디자이너 등 비개발자들과 편하게 의사소통하며 일할 수 있을 것 같다. 
 
 같이 일하고 싶은 개발자가 되기 위해 현재 부족한 점은 무엇인지 알아보고 개선해나가야 겠다.
