--- a/어떤 개발자와 같이 일하고 싶나요?.md
+++ b/어떤 개발자와 같이 일하고 싶나요?.md
@@ -37,7 +37,7 @@
 
 
 ### 인성이 나쁘지 않은 개발자
-이 역시 예상했던 대답이다. 인성이 나쁜 것이 겉으로 드러난다면 의사소통에도 어려움이 있을 것 같다. 그리고 일할 수 있는 사람을 마음대로 고를 수 있다면 아무래도 좋은 사람과 일하고 싶지 않을까?
+이 역시 예상했던 대답이다. 인성이 나쁜 것이 겉으로 드러난다면 의사소통에도 어려움이 있을 것 같다. 의사소통에 어려움이 없더라도 평소 하는 말과 행동이 불쾌하다면 같이 일하고 싶지 않을 것 같다. 물론 사적인 감정 빼고 일할 수는 있겠지만, 효율이 떨어질 것이라 생각한다. 우아한테크코스에는 '잡담도 경쟁력'이라는 말이 있다. 잡담을 하면서 친해지고, 친해지면 개발 관련 얘기를 자연스럽게 하게 된다. 의도하지 않아도 서로의 정보나 지식 등이 공유된다. 인성 나쁜 개발자와는 이런 잡담을 못할테니 피하고 싶은 게 당연하다. 그리고 일할 수 있는 사람을 마음대로 고를 수 있다면 아무래도 좋은 사람과 일하고 싶지 않을까?
 
 ### 뒷담화 하지 않는 개발자
 뒤에서 안 좋은 말을 하는 사람과 동료가 되고 싶지 않다고 했다. 듣는 것만으로도 공범이 되고, 안 좋은 얘기를 들어봤자 기분이 안 좋아질 뿐이니까. 그리고 뒷담화 하는 것은 이간질에 가깝기 때문에 팀의 사기에도 좋지 않을 것이다. 
