--- a/어떤 개발자와 같이 일하고 싶나요?.md
+++ b/어떤 개발자와 같이 일하고 싶나요?.md
@@ -9,6 +9,7 @@
 3. 개인적으로 생각하는 같이 일하고 싶은 개발자
 
 <br>
+<br>
 
 '같이 일하고 싶은 개발자'가 되고 싶어 어떤 개발자가 같이 일하고 싶은 개발자인지 알아보기로 했다. 설문 결과, 우아한테크코스 크루들은 아래와 같은 개발자와 일하고 싶다고 말했다.
 
@@ -35,30 +36,44 @@
 ### 의사소통이 잘 되는 개발자
 설문을 했을 때, 가장 먼저, 가장 많이 나온 대답이다. 그만큼 의사소통을 중요하게 생각하는 사람이 많은 것 같다. 그럼 의사소통이 잘 되는 개발자는 정확히 어떤 사람일까? 자기만의 생각이 있고, 그 생각을 상대방에게 이해하기 쉽게 전달한다. 그래서 설득을 잘한다. 자신의 의견만을 고집하지 않고 다른 사람의 얘기를 잘 수용한다.
 
+<br>
 
 ### 인성이 나쁘지 않은 개발자
-이 역시 예상했던 대답이다. 인성이 나쁜 것이 겉으로 드러난다면 의사소통에도 어려움이 있을 것 같다. 의사소통에 어려움이 없더라도 평소 하는 말과 행동이 불쾌하다면 같이 일하고 싶지 않을 것 같다. 물론 사적인 감정 빼고 일할 수는 있겠지만, 효율이 떨어질 것이라 생각한다. 우아한테크코스에는 '잡담도 경쟁력'이라는 말이 있다. 잡담을 하면서 친해지고, 친해지면 개발 관련 얘기를 자연스럽게 하게 된다. 의도하지 않아도 서로의 정보나 지식 등이 공유된다. 인성 나쁜 개발자와는 이런 잡담을 못할테니 피하고 싶은 게 당연하다. 그리고 일할 수 있는 사람을 마음대로 고를 수 있다면 아무래도 좋은 사람과 일하고 싶지 않을까?
+이 역시 예상했던 대답이다. 인성이 나쁜 것이 겉으로 드러난다면 의사소통에도 어려움이 있을 것 같다. 의사소통에 어려움이 없더라도 평소 하는 말과 행동이 불쾌하다면 같이 일하고 싶지 않을 것 같다. 물론 사적인 감정 빼고 일할 수는 있겠지만, 효율이 떨어질 것이라 생각한다. 
+
+우아한테크코스에는 '잡담도 경쟁력'이라는 말이 있다. 잡담을 하면서 친해지고, 친해지면 개발 관련 얘기를 자연스럽게 하게 된다. 의도하지 않아도 서로의 정보나 지식 등이 공유된다. 인성 나쁜 개발자와는 이런 잡담을 못할테니 피하고 싶은 게 당연하다. 그리고 일할 수 있는 사람을 마음대로 고를 수 있다면 아무래도 좋은 사람과 일하고 싶지 않을까?
+
+<br>
 
 ### 뒷담화 하지 않는 개발자
 뒤에서 안 좋은 말을 하는 사람과 동료가 되고 싶지 않다고 했다. 듣는 것만으로도 공범이 되고, 안 좋은 얘기를 들어봤자 기분이 안 좋아질 뿐이니까. 그리고 뒷담화 하는 것은 이간질에 가깝기 때문에 팀의 사기에도 좋지 않을 것이다. 
 
+<br>
+
 ### 기본적인 위생 관념은 있는 개발자
 정말 예상하지 못했던 대답이다. 하지만 한 크루의 경험담으로 이는 무시못 할 만한 문제라고 대답했다. 얼마나 심했기에 그러냐고 물어보니, 너무 안 씻어서 자리에 옷을 두고 가면 그 옷에서도 냄새가 심하게 나서 힘들었다고 했다. 코가 적응하기 힘들 정도로 안 좋은 냄새가 계속 난다면 일에 집중하기도 힘들 것 같고 대화하기도 꺼려질 것 같다. (재택 근무를 한다면... 괜찮지 않을까? 하는 생각이 든다.😂)
+
+<br>
 
 ### 배울 점이 있는 개발자
 한 크루는 아무리 작은 거라도, 하나쯤은 배울 점이 있었으면 좋겠다고 답했다. 열정을 고취시키고 성장을 돕는 개발자가 동료 개발자라면 생각만 해도 좋을 것 같다. 특히 주니어 개발자라면 누구나 이런 동료를 원하지 않을까?
 
+<br>
+
 ### 책임감이 있는 개발자
 조별과제를 한 번이라도 해본 사람이라면 이해할 대답이다. 당장 마감기한이 내일인데 갑자기 연락두절이 된다거나, 자신이 할 일을 다른 동료에게 계속 미루는 개발자는 상상 속에서도 같이 일하기 싫다.
+
+<br>
 
 ### 기분 상하지 않게 서로 코드 리뷰를 주고 받을 수 있는 개발자
 우아한테크코스에서 코드 리뷰를 받다보니 코드 리뷰의 중요성을 자연스럽게 알게 됐다. 코드 리뷰를 하면서 빠르게 성장하고 시야가 확장되었다. 하지만 아무리 도움되는 말이라도 기분 나쁘게 한다면 듣고 싶지 않을 것이다. 역시나 이 부분도 '의사소통 능력'에 해당한다. 상대방의 입장을 생각하고, 리뷰를 하기 전 다시 한 번 더 생각해보는 습관을 가지면 좋을 것 같다. 기분 나쁜 코드 리뷰 시간은 자연스럽게 기피하고 싶은 시간이 되니까 장기적인 관점에서도 좋지 않다.
 
+<br>
 
 ### 다른 직업을 무시하지 않는 개발자
 생각도 못했는데 이런 사람이 많다고 한다. 쉬워보이는데 왜 못 하지? 별 거 아닌 거 같은데. 이런 생각을 가지고 있으면 의사소통하기도 힘들어질 것 같다. 그리고 이 부분은 '인성이 나쁘지 않은 개발자'의 반대에도 속한다고 생각한다. 
 
-
+<br>
 <br>
 
 정리하고 보니 위와 같은 사람이라면 어느 분야에서든 같이 일하고 싶을 것 같다.
