--- a/어떤 개발자와 같이 일하고 싶나요?.md
+++ b/어떤 개발자와 같이 일하고 싶나요?.md
@@ -81,6 +81,12 @@
 
 <br>
 
-개인적으로 같이 일하고 싶은 개발자는 '**일할 때 편한 개발자**'라고 생각한다. 우아한테크코스를 하면서 스토리북에 대해 알게 됐는데, 이 스토리북이 협업에 많은 도움을 줄 것 같다는 생각이 들었다. 그래서 스토리북을 잘하고 싶다는 욕심이 생겼다. 잘 이용하게 되면 디자이너 등 비개발자들과 편하게 의사소통하며 일할 수 있을 것 같다. 
+개인적으로 같이 일하고 싶은 개발자는 '**같이 일할 때 편한 개발자**'라고 생각한다. 우아한테크코스를 하면서 스토리북에 대해 알게 됐는데, 이 스토리북이 협업에 많은 도움을 줄 것 같다는 생각이 들었다. 이렇게 생각한 이유는 다음과 같다.
+
+1. 작은 컴포넌트부터 만들어 디자이너와 소통하고 빠르게 피드백을 받을 수 있을 것 같다.
+2. 디자이너가 컴포넌트 디자인을 직접 변경해보면서 실제로 어떻게 적용될지 바로 알 수 있을 것 같다.
+3. 다른 팀원들이 진행 상황을 확인할 수 있다.
+
+스토리북 스킬 향상이 '같이 일할 때 편한 개발자'에 가까워지는 방법 중 하나라고 생각해 스토리북을 잘하고 싶다는 욕심이 생겼다.
 
 같이 일하고 싶은 개발자가 되기 위해 현재 부족한 점은 무엇인지 알아보고 개선해나가야 겠다.
