--- a/어떤 개발자와 같이 일하고 싶나요?.md
+++ b/어떤 개발자와 같이 일하고 싶나요?.md
@@ -47,7 +47,7 @@
 
 ### 뒷담화 하지 않는 개발자
 뒤에서 안 좋은 말을 하는 사람과 동료가 되고 싶지 않다고 했다. 듣는 것만으로도 공범이 되고, 안 좋은 얘기는 들어봤자 기분이 안 좋아질 뿐이니까.
-이 항목도 '인성이 나쁘지 않은 개발자'에 포함된다고 생각해서 같이 묶으려다가 뒷담화라는 특정 행동을 하지 않는 사람과 일하고 싶지 않다는 대답이라 분리하기로 했다. 그리고 목차만 보고 넘기는 사람이 많을 것이기 때문에 이 부분이 목차에 있으면 좋겠다고 생각했다. 
+이 항목도 '인성이 나쁘지 않은 개발자'에 포함된다고 생각해서 같이 묶으려다가 뒷담화라는 특정 행동을 하지 않는 사람과 일하고 싶지 않다는 대답이라 분리하기로 했다. 그리고 소제목만 보고 넘기는 사람이 많을 것이기 때문에 이 부분이 소제목에 있으면 좋겠다고 생각했다. 
 
 <br>
 
