--- a/어떤 개발자와 같이 일하고 싶나요?.md
+++ b/어떤 개발자와 같이 일하고 싶나요?.md
@@ -89,4 +89,6 @@
 
 스토리북 스킬 향상이 '같이 일할 때 편한 개발자'에 가까워지는 방법 중 하나라고 생각해 스토리북을 잘하고 싶다는 욕심이 생겼다.
 
-같이 일하고 싶은 개발자가 되기 위해 현재 부족한 점은 무엇인지 알아보고 개선해나가야 겠다.
+이 글에 나온 8가지 항목이 기본적인 것처럼 보이지만, 사실 모두 잘 갖추기는 어렵다. (개인적으로 1번이 제일 어려운 부분이라고 생각한다.) 8가지 항목에 모두 해당되는 개발자라고 **스스로** 생각한다면 착각일 확률이 높다. 자기객관화 하여 자신이 개선해야 할 항목이 무엇인지 알 수 있다면 좋겠지만, 어렵다면 솔직하게 대답해 줄 주변 사람들에게 물어보는 것도 좋은 방법이다.
+
+이미 8가지 항목에 해당되는 개발자라면 의사소통 능력을 계속해서 발전시켜보는 걸 추천한다.
