--- a/어떤 개발자와 같이 일하고 싶나요?.md
+++ b/어떤 개발자와 같이 일하고 싶나요?.md
@@ -67,7 +67,7 @@
 <br>
 
 ### 기분 상하지 않게 서로 코드 리뷰를 주고 받을 수 있는 개발자
-우아한테크코스에서 코드 리뷰를 받다보니 코드 리뷰의 중요성을 자연스럽게 알게 됐다. 코드 리뷰를 하면서 빠르게 성장하고 시야가 확장되었다. 하지만 아무리 도움되는 말이라도 기분 나쁘게 한다면 듣고 싶지 않을 것이다. 역시나 이 부분도 '의사소통 능력'에 해당한다. 상대방의 입장을 생각하고, 리뷰를 하기 전 다시 한 번 더 생각해보는 습관을 가지면 좋을 것 같다. 기분 나쁜 코드 리뷰 시간은 자연스럽게 기피하고 싶은 시간이 되니까 장기적인 관점에서도 좋지 않다.
+우아한테크코스에서 코드 리뷰를 받다보니 코드 리뷰의 중요성을 자연스럽게 알게 됐다. 코드 리뷰를 받으며 빠르게 성장하고 시야가 확장됐기 때문이다. 하지만 아무리 도움되는 말이라도 기분 나쁘게 한다면 듣고 싶지 않을 것이다. 역시나 이 부분도 '의사소통 능력'에 해당한다. 상대방의 입장을 생각하고, 리뷰를 하기 전 다시 한 번 더 생각해보는 습관을 가지면 좋을 것 같다. 기분 나쁜 코드 리뷰 시간은 자연스럽게 기피하고 싶은 시간이 되니까 장기적인 관점에서도 좋지 않다.
 
 <br>
 
