refactor: 피드백을 바탕으로 내용 수정

--- a/레벨 2 글쓰기/꿈에 대한 고찰 일기.md
+++ b/레벨 2 글쓰기/꿈에 대한 고찰 일기.md
@@ -24,8 +24,15 @@
 
 <br>
 
-### 2022.08.18 (🌧️) 무엇을 위해 살고 있나?
-이게 꿈이더라도 내가 이렇게 잘 살기 위해 노력하는 이유는 뭘까?   
+. . . .
+
+<br>
+
+### 2023.05.16 (🌧️) 무엇을 위해 살고 있나?
+갑작스럽게 작년에 고민했던 주제가 생각이 났다.   
+혹시 이 세상은 꿈이 아닐까 하는 생각 말이다.   
+
+그런데 정말 이 곳이 꿈이더라도 내가 이렇게 잘 살기 위해 노력하는 이유는 뭘까?   
 오늘이 즐겁지 않더라도 내일이 즐거울 수 있을거란 기대?   
 혹은 소소하더라도 오늘이 즐거웠길래?   
 그렇다면 난 대체 무엇이 그리도 즐겁길래 내일을 살아갈 힘이 생긴 것일까?   
@@ -36,7 +43,7 @@
 
 <br>
 
-### 2022.09.21 (⛅️) 다른 이들은 어떤가?
+### 2023.05.18 (⛅️) 다른 이들은 어떤가?
 > 익명성을 보장하기 위해 비슷한 의견들은 섞고 각색해보았습니다.   
 > 갑작스런 인터뷰에 응해준 크루분들 감사합니다 🙇‍♀️
 >
@@ -78,7 +85,7 @@
 
 <br>
 
-### 2022.11.18 (☀️) 꿈일지언정 내가 오늘을 살아가는 이유는?   
+### 2023.05.19 (☀️) 꿈일지언정 내가 오늘을 살아가는 이유는?   
 솔직한 심정으론 아직도 잘 모르겠다.   
 완벽히 공감이 되는 것은 없다.
 
@@ -91,9 +98,11 @@
 성취하려는 일이 크든 작든 상관 없다.   
 나노블록을 다 맞추는 그 과정도 결과도 내게는 즐거움이 된다.
 
-성취하려는 일이 성공 여부는 중요치 않다.   
-내가 노력했던 일이 물거품이 되더라도 이 노력은 결국 어딘가에 도움이 될 것이다.   
-또한, 일을 성공시키기 위해 주어졌던 그 속의 작은 미션들은 수행하며 나는 즐거웠을 것이기에.
+하지만, 성취하려는 일이 성공 여부는 중요치 않다.   
+내가 노력했던 일이 물거품이 되더라도 이 노력은 결국 어딘가에 도움이 될 것이라 생각한다.   
+또한, 일을 성공시키기 위해 주어졌던 그 속의 작은 미션들을 수행하며 나는 즐거웠을 것이기에.
 
 이런 성취에서 오늘 즐거움이 오늘의 나를 살아가게 하는 원동력이 아닐까 싶다.   
 하지만 완벽한 결론은 아니기에 나에게 즐거움을 주는 것은 또 무엇이 있을까 고민해보려 한다.
+그리고 그 즐거움을 통해 내 삶에서 중요한 것은 과연 무엇인지 생각해보고자 한다.
+또한, 그 즐거움을 잘 유지할 수 있도록 이를 사람들과 나눌 수 있도록 하고자한다.
