--- a/레벨3_집사의고민.md
+++ b/레벨3_집사의고민.md
@@ -1,19 +1,37 @@
-반려동물 식품을 구매하는 일은 어렵다고들 합니다. 정말 우리가 반려동물 식품을 살 곳이 없어서, 혹은 살 방법이 없어서일까요? 아닙니다. 구매할 반려동물 식품을 ‘결정’하는 것이 어렵기 때문입니다. 반려동물 식품은
-우리가 평생 접해온 인간을 위한 영양정보와는 다르기 때문에 올바른 기준을 찾는 것부터 어렵습니다. 또한 반려동물 식품의 리뷰는 먹는 반려동물이 평가하는 것이 아니기 때문에 우리 반려동물에 딱 맞는 식품을 선택하기도
-어렵습니다. 특히 이 과정은 초보 집사에게 더 어려운데요. 초보 집사는 반려동물에게 어떤 기준에 맞는 식품을 먹여야 되는지에 대한 경험이 부족합니다. 그래서 초보집사들이 보다 좋은 사료를 선택할 수 있도록 최소한의
-기준을 제공해줄 수 있는 서비스인 집사의고민을 만들게 되었습니다.
+반려동물 식품을 구매하는 일은 어렵다고들 합니다. 정말 우리가 반려동물 식품을 살 곳이 없어서, 혹은 살 방법이 없어서 어려운 것일까요? 아닙니다. 구매할 반려동물 식품을 ‘결정’하는 것이 어렵기 때문입니다. 반려동물 식품은 우리가 평생 접해온, 사람을 위한 영양 정보와는 다르기 때문에 올바른 선택 기준을 찾는 것부터 어렵습니다.
 
-‘집사의 고민’의 목표는 초보 집사들의 식품 고민을 줄이는 데에 있습니다. 우리 아이에게 적절한 식품을 선택하기 힘든 상황에서 선택 기준을 제시하고 분류하여 효율적으로 선택할 수 있도록 이끌어 줍니다. 수많은 사료들
-중 최선의 결정을 할 수 있도록 초보 집사분들을 도와드립니다. 여러분이 초보 집사라면 어떤 것이 좋은 사료이고 좋은 사료의 기준은 무엇인지 궁금할 것입니다. ‘집사의 고민’은 그런 집사들을 위해 어려운 영양 성분
-정보를 제거하고 다양한 전문가들이 인정하는 좋은 사료의 기준을 간소하게 제공합니다.
+특히 이 과정은 초보 집사에게는 더 어려운데요. 초보 집사는 어떤 기준으로 반려동물 식품을 선택해야 하는지에 대한 경험이 부족합니다. 이러한 어려움을 해소하기 위해 보다 쉽고 빠르게 좋은 품질의 반려동물 식품을 선택할 수 있도록 도와주는 서비스, **집사의 고민**을 만들게 되었습니다.
 
-여러분은 ‘집사의 고민’을 통해 ‘영양소 기준 만족 여부’, ‘브랜드 연구센터 존재 유무’, ‘브랜드 상주 수의사 존재 유무’ 등 간략하지만 사료의 신뢰성을 높혀주는 정보들을 직관적으로 확인할 수 있습니다.
-또한, 사용자의 리뷰를 통해 실제 사료 후기를 들어보며 기호성이나 대변상태 등 추가적인 정보를 습득, 공유할 수 있습니다.
-이처럼 ‘집사의고민’은 수많은 반려동물 식품들 속에서 고민하는 초보집사들이 고려해야하는 기준을 제공하는 서비스입니다. 반려동물에게 먹일 식품을 어디서부터 어떻게 찾아봐야할지 모르는 분들에게 많은
-전문가들이 식품을 고르는 기준을 제공하여, 집사의 안목을 높이는 것이 다른 서비스들과 다르다고 할 수 있습니다.
-미국과 유럽의 영양소 기준을 만족하는지, 신뢰할 수 있는브랜드인지에 대한 정보(역사가 오래된 브랜드인지, 전용 연구센터가 존재하는지 등)를 제공함으로써 믿고 먹일 수 있는 반려동물 식품 직접 탐색할 수 있도록 하는
-것이 집사의고민의 핵심입니다.
+‘집사의 고민’의 목표는 초보 집사들의 식품 고민을 줄이는 데에 있습니다. 어떤 식품을 골라야 하는지 선택하기 힘든 상황에서 효율적인 선택 기준을 제시합니다. 그리고 그런 기준에 초보 집사들이 익숙해질 수 있도록 안내합니다. ‘집사의 고민’은 초보 집사들을 위해 과도한 정보는 요약하고 다양한 전문가들이 인정하는 좋은 식품의 기준을 한눈에 볼 수 있게 제공합니다.
 
-자신의 반려동물이 어떤 종류의 사료를 좋아하는지 맞춤 사료 추천 기능도 갖추고 있습니다. 맞춤 사료 추천 기능은 소비자의 구매 시간을 단축시켜주는 역할을 해줍니다.
-또한, 맞춤 추천 사료는 초보 집사가 새로운 사료를 직접 찾아서 구매하는 것 보다 반려동물의 반응이 좋을 확률이 높습니다. 지금 바로 집사에고민에 참여해보세요! 단순한 사료추천을 넘어, 사료를 고르는 안목을 기를 수
-있습니다! 이 기회를 놓치지 마세요! 오직 집사의고민에서만! 브라우저 고정! 절대 돌아오지 않습니다!
+그렇다면 괜찮은 반려동물 식품임을 알 수 있는 지표는 무엇이고 이 지표가 식품 선택에 도움이 되는 이유는 무엇일까요?
+
+1. **AAFCO(미국), FEDIAF(유럽) 영양소 기준 충족 여부**
+
+   미국과 유럽의 반려동물 영양소 기준 충족 여부를 통해 반려동물이 하루에 필요로 하는 최소 영양소 요구치를 만족했는지를 알 수 있고 이를 통해 ‘**장기 급여가 가능한 사료**’인지를 판단할 수 있습니다.
+
+2. **기호성 및 대변상태**
+
+   이 두 가지 요소는 초보 집사도 명확히 알 수 있는 지표입니다. 이를 통해 반려동물이 해당 식품을 잘 먹는지, 소화는 잘 시키는지에 대해 알 수 있습니다.
+
+3. **브랜드 정보**
+
+   브랜드에 대한 정보는 왜 중요할까요?
+
+   브랜드의 **창립연도**는 그 자체로 브랜드의 신뢰성을 나타내는 지표입니다. 역사가 오래된 브랜드는 지속적인 제품 개발과 연구를 통해 제품의 높은 품질과 안정성을 제공합니다.
+
+   브랜드에 **전용 연구센터**가 있다는 것은 사후 AS에서도 단순히 교환 처리나 보상 처리를 하는 것이 아니라 안전성 검사, 독성 검사, 영양소 분석을 통해 문제의 원인까지 면밀히 파악해서 재발을 방지할 수 있는 능력까지 갖췄다는 것을 의미합니다.
+
+   또한 브랜드 내에 **상주하는 수의사**가 있는지 여부로 해당 브랜드의 식품에 대해 책임질 수 있는 사람이 있는지 그리고 신뢰성 있는 정보를 제공하는지에 대해 알 수 있습니다.
+
+
+이런 지표들은 어디서 확인할 수 있을까요?
+
+여러분은 ‘집사의 고민’에서 **영양소 기준 충족 여부,** **브랜드의 창립연도**, **전용 연구센터 유무** 그리고 **상주 수의사 유무** 등 간략하지만 식품의 신뢰성을 높이는 정보들을 직관적으로 확인할 수 있습니다.
+
+또한, 사용자 리뷰를 통해 집사들의 실제 후기를 들어보며 **기호성, 대변상태, 이상반응** 등 추가적인 정보를 습득하고 공유할 수 있습니다.
+
+현재 기능은 반려동물에게 먹일 식품을 어디서부터 어떻게 찾아봐야 할지 모르는 집사들에게 지표를 제공하는 형식입니다.
+집사의 고민은, 여기서 더 나아가 초보 집사들이 스스로 안목을 기르고 서비스와 함께 성장하길 바랍니다.
+
+지금 ‘집사의 고민’에 참여하여 함께 성장해 보면 어떨까요?
