--- a/레벨4/내가 꿈꾸는 프로그래머로서의 삶.md
+++ b/레벨4/내가 꿈꾸는 프로그래머로서의 삶.md
@@ -20,7 +20,7 @@
 
 서비스 배너에 자고있는 강아지를 클릭하면 작은 토스트창이 뜨는 이스터에그였는데, 이를 활용해서 강아지를 누가 더 빨리 깨우는지 겨루는 이벤트를 하기로 했다. 당일 새벽에 급하게 강아지 눈도 그려 넣고 기능을 구현해 이벤트를 추가했다.
 
-우리 부스에 와준 사람들이 생각보다 더 놀라운 열정으로 이벤트에 참여해 주었고, 그들이 이를 즐거는 모습을 보며 보람을 느꼈다.
+우리 부스에 와준 사람들이 생각보다 더 놀라운 열정으로 이벤트에 참여해 주었고, 그들이 이를 즐기는 모습을 보며 보람을 느꼈다.
 
 게다가 이벤트를 통해 우리 서비스를 체험한 사람들이 더 많은 피드백을 줘서 더욱 기뻤다.
 
