--- a/내가 꿈꾸는 프로그래머로서의 삶.md
+++ b/내가 꿈꾸는 프로그래머로서의 삶.md
@@ -5,7 +5,7 @@
 기계 / 전기 / 화학공학과를 지원하라던 선생님의 말씀을 뒤로 하고 컴퓨터공학과에 진학했다.  
 대학교 3학년이 될 때까지 개발에는 별로 관심이 없었다. 코딩은 주어진 과제를 해결하기 위한 용도였다.  
 졸업을 위해 꼭 이수해야 하는 과목에서 프론트엔드 팀원 한자리가 비었고, 그렇게 개발을 시작했다.  
-만만하게 봤던 개발은 예상보다 훨씬 어렵고, 복잡했다.  
+만만하게 봤던 개발은 예상보다 훨씬 어렵고 복잡했다.  
 마음만 먹으면 서비스 하나쯤 금방 만들어서 선보일 줄 알았지만 그렇지 않았다.
 
 ## 우아한테크코스
