--- a/내가 꿈꾸는 프로그래머로서의 삶.md
+++ b/내가 꿈꾸는 프로그래머로서의 삶.md
@@ -1,7 +1,7 @@
 ## 개발을 시작하게 된 계기
 
 개발을 시작하게 된 계기는 특별하지 않았다.  
-어릴 적부터 컴퓨터 게임을 좋아했고, 초등학생 때 자격증을 여러 개 취득했다.  
+어릴 적부터 컴퓨터 게임을 좋아했고, 초등학생 때 컴퓨터 관련 자격증을 여러 개 취득했다.  
 기계 / 전기 / 화학공학과를 지원하라던 선생님의 말씀을 뒤로 하고 컴퓨터공학과에 진학했다.  
 대학교 3학년이 될 때까지 개발에는 별로 관심이 없었다. 코딩은 주어진 과제를 해결하기 위한 용도였다.  
 졸업을 위해 꼭 이수해야 하는 과목에서 프론트엔드 팀원 한자리가 비었고, 그렇게 개발을 시작했다.  
