Update 레벨 4 글쓰기.md

--- a/레벨 4 글쓰기.md
+++ b/레벨 4 글쓰기.md
@@ -37,7 +37,7 @@
 게임 동아리에 있는 모두가 열정적이고 게임 개발에 진심이지만, 대부분의 사람이 게임 개발을 직업으로 가지지 않았다. 
 약 1년간의 고민을 통해 난 게임 개발자를 직업으로 가지지 않기로 했다. 
 결론만 말하자면, 난 게임 개발을 할 때 가장 행복하지만, 직업으로 갖고 싶지는 않았다. 
-(이 고민이 정말 길었지만, 내용이 너무 길어서 생각한다.)
+(이 고민이 정말 길었지만, 내용이 너무 길어서 생략한다.)
 
 **꿈에 대한 내 생각의 변화**
 
