docs: 오탈자 수정

--- a/[레벨4] 하고 싶은 걸 할 수 있는 사람.md
+++ b/[레벨4] 하고 싶은 걸 할 수 있는 사람.md
@@ -7,7 +7,7 @@
 직장을 다니며 굉장히 많은 시간과 노력을 단순 자료 입력에 쏟았던 경험이 있다.
 웹사이트에 어떤 ID를 입력하여 검색하고, 그 결과를 엑셀에 정리해야 했다.
 몇 건 정도가 아닌 몇 백건을 수행하다보면 몇 시간이 훌쩍 지나있었고, 숫자를 다루다보니 틀린 자료를 입력해 이를 수정하는 등의 시간도 만만치 않게 들었다.
-사사로운 않은 일은 아니지만 중요한 일도 아니었고, 다른 해야 할 일들도 쌓여있었다.
+사사롭지 않은 일은 아니지만 중요한 일도 아니었고, 다른 해야 할 일들도 쌓여있었다.
 그래서 일을 하다보면 이 반복 작업에 대한 회의감이 들곤했다. ‘이 작업을 자동화하고 싶다.’하는 생각이 들었지만 무엇을 해야 하는 지, 무엇을 알아봐야 하는 지, 무엇과 관련있는 지조차 몰라 기존의 방식을 답습했다.
 
 개발은 내게 먼 우주였다. 개발로 무엇을 할 수 있는지조차 몰랐던 미지의 영역이었다.
@@ -16,7 +16,7 @@
 
 개발을 배우면 배울 수록 다양하고 깊이가 넓다는 것을 깨닫는다.
 내 생활을 보조하기 위한 도구로서 시작했던 개발은 확장성이 무한했고, 그만큼 내가 할 수 있는 것들이 많다고 느꼈다.
-지도를 이용하여 이동이 불편한 사람들을 위한 안내 서비스를 만들어낼 수도 있고, 노약자를 위한 베리어프리 키오스크도 만들 수 있다. 사람과 사람을 잇는 커뮤니티를 만들 수도 있고, 기존에 웹접근성이 떨어지는 서비스를 개선하여 서비스를 이용하지 못했던 사람에게 서비스를 이용할 수 있도록 만들 수도 있다.
+지도를 이용하여 이동이 불편한 사람들을 위한 안내 서비스를 만들어낼 수도 있고, 노약자를 위한 베리어프리 키오스크도 만들 수 있다. 사람과 사람을 잇는 커뮤니티를 만들 수도 있고, 기존에 웹접근성이 떨어지는 서비스를 개선하여 서비스를 이용하지 못했던 사람이 서비스를 이용할 수 있도록 만들 수도 있다.
 이제는 나의 생활을 개선하기 위한 개발보단 내가 원했던 가치창출, 사회기여를 하기 위한 개발이 하고 싶다고 생각한다.
 
 모든 경험은 이롭다. 다양한 직군의 사람을 만나 이야기를 하고, 다양한 경험을 해보는 것은 깨달음을 준다.
