--- a/레벨4.md
+++ b/레벨4.md
@@ -1,12 +1,14 @@
 ## 개발자를 꿈꾸기까지
 
+어떤 개발자가 되고 싶은지 이야기 하기 전에 잠시 왜 개발자를 꿈꾸게 되었는지 이야기 해보고자 한다.
+
 대학생 시절 꿈을 돌아보면 그다지 큰 목표가 없었던 것 같다.
 
 고등학생 때 학교 근처 대학생들이 프로그래밍을 알려주는 동아리가 있었다. 이 동아리만 들어가면 대학교부터 취업까지 뭐라도 될 것만 같은 느낌이 들어 아무 생각 없이 지원했다.
 
 처음 만난 프로그래밍은 생각보다 되게 별로였다. 별 찍기 문제를 풀다 내가 왜 이걸 하고 있지 싶었다.
 
-생각보다 별로 인기가 없던 이 동아리의 활동은 다른 친구들에게는 상당히 생소해서 사소한 코드 한 줄도 자랑거리가 될 수 있었다.
+생각했던 것보다 별로 인기가 없던 이 동아리의 활동은 다른 친구들에게는 상당히 생소해서 사소한 코드 한 줄도 자랑거리가 될 수 있었다.
 
 별거 없는 활동에도 친구들에게 자랑하면서 이 분야에 재미를 느끼게 되었다. 이때부터 막연하게 개발자를 꿈꿨던 것 같다.
 
@@ -14,7 +16,7 @@
 
 앞서 말했듯 난 큰 목표가 없었다. 관련 전공에 온 탓에 예전처럼 별거 없는 코드로 자랑할 수 없게 되었고 고등학교에서 벗어났다는 해방감에 그냥 놀기만 했던 것 같다.
 
-그렇게 놀다 보니 인생의 큰 시련(군대...)이 찾아왔고 왜인지 모르겠지만 괜한 반항심이 들어 더 놀았던 것 같다.
+그렇게 놀다 보니 인생의 큰 시련(군대...)이 찾아왔고 왜인지 모르겠지만 괜한 반항심이 들어 더 놀았다.
 
 입대를 1년 미룬 다른 친구가 파이썬을 공부한다는 것을 보고 흥미는 갔지만 굳이 공부해 보려 하지 않았다. 그렇게 놀기만 하다 군대에 다녀왔다.
 
@@ -22,7 +24,9 @@
 
 뭔가 눈에 보이는, 진짜로 쓸 수 있는 프로그램을 만들고 싶었는데 유튜브에 돌아다니던 파이썬을 이용한 웹 크롤러 개발 강의가 눈에 들어왔다.
 
-입대 전 친구가 일주일도 안 걸려서 파이썬을 배웠다고 했던게 생각나 가볍게 한번 공부를 시작해 봤다. 원래도 예시를 따라 하는 것은 재미가 없어 어떤 프로그래밍 강의든 끝까지 듣지 못했던 나는 이번에도 강의를 반도 안 듣고 나 혼자 뭔가를 해보려 했다.
+입대 전 친구가 일주일도 안 걸려서 파이썬을 배웠다고 했던게 생각나 가볍게 한번 공부를 시작해 봤다.
+
+따라만 하는 것은 재미가 없어 어떤 프로그래밍 강의든 끝까지 듣지 못했었다. 이번에도 강의를 반도 안 듣고 나 혼자 뭔가를 해보려 했다.
 
 내가 사용하는 웹 페이지를 크롤링하는 프로그램을 만들고자 호기롭게 개발자 도구를 켰다가 복잡한 태그들의 향연에 압도되었다. 웹도 문서라서 규칙이 있다는 얘기를 들었는데 이건 도무지 뭘 의미하는지 알 수가 없었다.
 
@@ -38,7 +42,7 @@
 
 ## 내가 꿈꾸는 프로그래머로서의 삶
 
-이번 글의 주제는 앞으로 내가 꿈꾸는 프로그래머로서의 삶인데 지금까지 구구절절 개발자를 꿈꾸게 된 과정을 얘기해 의아했을 것이다. 일단 주제에 대한 답을 먼저 하자면 솔직하게 `아직 없다`가 내 답이다.
+일단 내가 꿈꾸는 프로그래머로서의 삶에 대한 답을 먼저 하자면 솔직하게 `아직 없다`가 내 답이다.
 
 내가 이 분야에 발을 담근 지 고작 2년이고, 그마저도 그냥 잘해지고 싶어 열심히 공부한 시간이 전부라 아직 내 미래에 대해 고민해 보지 않았다.
 
