--- a/레벨4.md
+++ b/레벨4.md
@@ -2,9 +2,9 @@
 
 다양한 분야에 관심이 많았던 나에게 오랜 시간 정착한 분야는 프로그래밍이 유일하다.
 
-여러가지 이유가 있었지만, 제일 큰 이유는 프로그래밍의 잠재력이다.
+여러가지 이유가 있었지만, 가장 큰 이유는 프로그래밍의 잠재력이다.
 
-존재하지 않았던 것들을 만들 수 있는 세상이라는 것을 금방 알아차렸다.
+프로그래밍은 존재하지 않았던 것들을 만들 수 있는 강력한 도구라는 것을 금방 알아차렸다.
 
 할 수 있는게 무궁무진 하다 보니 모든 것들이 재밌었다.
 
@@ -14,13 +14,13 @@
 
 <br/>
 
-어느 회사를 다니고, 어떤 명예 따라오는지는 크게 기대하지 않는다.
+어느 회사를 다니고, 어떤 명예가 따라오는지는 크게 기대하지 않는다.
 
-내가 상상하는 것들을 만들어내고 표현하는 프로그래밍에 질리지 않고, 처음 그 설렘을 유지하고 싶었다.
+내가 상상하는 것들을 만들어내고 표현하는 프로그래밍에서 처음 느꼈던 그 설렘을 질리지 않고 유지하고 싶다.
 
-억대 연봉은 받으며 회사 이름으로 나를 소개하는 삶을 쫓지 않고, 프로그래밍이 나는 표현할 수 있는 하나의 언어로 자리잡은 삶을 꿈꾸고 있었다.
+억대 연봉을 받으며 회사 이름으로 나를 소개하는 삶을 쫓지 않고, 프로그래밍이 나는 표현할 수 있는 하나의 언어로 자리잡은 삶을 꿈꾸고 있다.
 
-직업으서의 프로그래머 말고, 삶으로서 프로그래밍을 하고 싶다.
+직업으로서의 프로그래머 말고, 삶으로서 프로그래밍을 하고 싶다.
 
 누가 시키지 않아도, 새로운 배움을 지속하고 상상하던 무언가를 만들며 그 과정에서 재미를 꾸준히 습득하는 삶.
 
@@ -34,7 +34,7 @@
 
 자율성, 유능성, 관계성의 실현을 통해 내재적 동기가 생긴다는 내용이다.
 
-이를 처음 알게되었을때 내가 즐겨했던 모든 것들에 적용되는 이론이었고, 꽤나 믿게 되었다.
+내가 즐겨했던 모든 것들에 적용되는 이론이었기 때문에 이 이론을 믿을 수 있었다.
 
 그리고 이를 활용해서 프로그래밍의 재미를 지속적으로 발견하며 오래오래 하고 싶다.
 
@@ -42,7 +42,7 @@
 
 내가 하고싶은 학습을 하며 내가 상상하고 원하는 것들을 창조하는 삶.
 
-그 과정에서 객관적으로 발견되는 나의 성장과 발전.
+그 과정에서 객관적으로 발견하는 나의 성장과 발전.
 
 그리고 나의 걸작이 가치를 창출하여 누군가와 연결되는 것을 느끼는 것.
 
