레벨4_글쓰기.md 수정

--- a/레벨4_글쓰기.md
+++ b/레벨4_글쓰기.md
@@ -8,8 +8,8 @@
 제가 말하는 일상이란, “사용자”의 일상입니다.  
 소프트웨어는, 프로그램은 사용자 없이는 가치도 없습니다.  
 그 어떤 대단한 프로그램이라도 누군가 사용할 때 의미가 있기 때문입니다.  
-솔직히 코드가 가독성이 좋고, 파일 분리가 잘되어 있고는 사용자 입장에서는 알 필요가 없습니다.  
-사용자 입장에서 중요한 것은 내가 이 프로그램을 사용해서 목적을 이룰 수 있는가. 목적을 이루기까지의 과정이 단순한가. 그 과정에서 오류가 발생해 기껏 작성하던 자료를 날리진 않았는가 등입니다.  
+솔직히 코드가 가독성이 좋다거나, 파일 분리가 잘되어 있는 것은 사용자 입장에서는 알 필요가 없습니다.  
+사용자 입장에서 중요한 것은 내가 이 프로그램을 사용해서 목적을 이룰 수 있는가, 목적을 이루기까지의 과정이 단순한가, 그 과정에서 오류가 발생해 기껏 작성하던 자료를 날리진 않았는가 등입니다.  
   
 물론 좋은 코드를 짜기 위한 노력을 폄하하는 것은 아닙니다.  
 사용자를 만족시키기 위해서는 무엇보다 프로그램이 안정적이고 신뢰성 있어야 합니다.  
@@ -25,7 +25,7 @@
 야심이라 포장하는 제 욕심입니다.  
 저는 욕심 많은 사람이라, 이 욕심을 채우기 위해서라면 10년이고 20년이고 개발자로 일하고 싶습니다.  
 다행인 점은 짧은 인생 내내 욕심껏 살아왔기에 노력을 다하는 법 또한 알고 있다는 것입니다.  
-조금 오래 걸릴지도 모르지만 (특히나 요즘은 생각보다 오래 걸리겠다는 생각이 들었지만) 아직은 욕심을 부릴 때인 것 같네요.  
+조금 오래 걸릴지도 모르지만 (특히나 요즘은 생각보다 시간이 오래 걸리겠다고 느꼈지만) 아직은 욕심을 부릴 때인 것 같네요.  
 
 좋아하는 주제이다 보니 이런 저런 이야기를 많이 했습니다.  
 사실, 제가 꿈꾸는 프로그래머의 삶은 한 문장으로 요약할 수 있습니다.  
