--- a/레벨4.md
+++ b/레벨4.md
@@ -42,11 +42,11 @@
 
 우선은 안드로이드 개발자가 되기 위해 계속 공부할 것이다. 취업을 바라보며 달리고 있지는 않지만, 현재 만들고 있는 프로덕트들을 즐겁게 만들다 보면 어느 순간 안드로이드 개발자가 되어 있을 것이라 생각한다. 하지만 10년, 20년 뒤에 내가 어떤 개발을 하고 있을 지는 모르겠다. 중간에 새로운 더 재밌는 개발을 만날 수도 있지 않을까? 물론 그때도 개발에 관련된 일을 하고 있을 것이란 것은 명확하다.
 
-이런 생각들로 확실하게 알 수 있는 것은 개발을 오래 하고 싶다는 것이다. 개발자들은 나이가 들고 경력이 쌓이면 많이 사람이 기획자가 되거나 관리자가 된다고 들었다. 그러나 지금의 나는 개발을 오래 하고 싶다.
+이런 생각들로 확실하게 알 수 있는 것은 개발을 오래 하고 싶다는 것이다. 개발자는 나이가 들고 경력이 쌓이면 많은 사람이 기획자가 되거나 관리자가 된다고 들었다. 그러나 지금의 나는 개발을 오래 하고 싶다.
 
 
 
-마지막으로 다른 사람들을 가르치고 싶다. 선생님이 되고 싶다는 말은 아니다. 지금까지 성장하면서 많은 선배들의 도움을 받았다. 처음 안드로이드를 배웠던 동아리 SOPT에서, 개발 공부 방법을 알려준 우아한테크코스에서 등 많은 사람이 도움을 받았고 항상 감사하다. 아마 앞으로 나아갈 길에서도 많은 도움을 받을 것이다. 그래서 내가 받은 도움을 다른 사람들에게 다시 나누어 주고 싶다. 지금껏 도움을 주셨던 선배들 모두 하나같이 너도 다른 사람들을 알려주면 된다고 말했다.
+마지막으로 다른 사람들을 가르치고 싶다. 선생님이 되고 싶다는 말은 아니다. 지금까지 성장하면서 많은 선배의 도움을 받았다. 처음 안드로이드를 배웠던 동아리 SOPT에서, 개발 공부 방법을 알려준 우아한테크코스에서 등 많은 사람에게 도움을 받았고 항상 감사하다. 아마 앞으로 나아갈 길에서도 많은 도움을 받을 것이다. 그래서 내가 받은 도움을 다른 사람들에게 다시 나누어 주고 싶다. 지금껏 도움을 주셨던 선배들 모두 하나같이 너도 다른 사람들을 알려주면 된다고 말했다.
 
 또 남에게 알려주는 것은 본인의 성장에도 도움이 된다. 유명한 학습법인 "파인만 기법"에서도 알 수 있듯이 온전히 알고 있어야 남에게 설명이 가능하다. 그래서 남을 알려주며 나도 성장하고 싶다.
 
