--- a/레벨4.md
+++ b/레벨4.md
@@ -34,7 +34,7 @@
 
 그래서 꿈꾸는 삶이 어떻게 변했는가. 결과로 훨씬 넓은 선택지가 생겼다. 이전에는 내 "취미"를 접목하고 싶다고 했을 만큼 나에게 필요한 서비스만 만들고 싶었다. 그러나 지금은 남에게 필요한 서비스더라도 내가 이해할 수 있는 도메인이라면 재밌게 만들 수 있다. 예를 들면 이전에는 축구 도메인의 프로덕트만 만들고 싶었다면, 지금은 내가 여행을 자주 가지 않더라도 여행 도메인의 프로덕트를 만들 수 있다는 말이다.
 
-이전과 같은 점이라면 프로덕트를 만들고 성취를 느끼는 것은 변함이 없다. 여전히 공들여 프로덕트를 만들고 싶고, 소중히 키워나가고 싶다.
+프로덕트를 만들고 성취를 느끼는 것은 이전과는 변함이 없다. 여전히 공들여 프로덕트를 만들고 싶고, 소중히 키워나가고 싶다.
 
 
 
