docs: 고마운 크루들의 리뷰반영

--- a/이도현.md
+++ b/이도현.md
@@ -1,13 +1,13 @@
 ### 목마른 아이
 
-내 어렴풋한 기억에는 칭찬과 인정에 목마른 한 아이가 있다.
+내 어렴풋한 기억에는 칭찬과 인정에 목마른 한 아이가 있었다.
 갈증이 미쳐 해소되지 않은 탓일까? 마음 한구석에 자리를 잡았다.
 시간이 흘러, 성인이 된 지금도 여전히 무언가를 만들거나, 해내고 난 뒤 주변 사람에게 인정받고 싶어 한다.
 그냥 **'나는 이런 사람이다.'** 말해주고 싶어서 뜬금없이 이야기해 봤다.
 
 ### 나아갈 수 있던 이유
 
-곁에 있는 `내 사람`들은 아마도 이런 성향을 잘 알고 있을 것이다.
+곁에 있는 `내 사람`들은 아마도 인정받고자 하는 나의 성향을 잘 알고 있을 것이다.
 그래서일까? 독학한 프로그래밍으로 작은 미니 게임을 만들어 소개했을 때, 그들은 아낌없는 `칭찬과 인정`을 보냈다. 이는 자신감이 되고, 더 높은 곳의 나에게 도전할 수 있는 원동력이 됐다.
 
 ### 개발자
@@ -15,14 +15,14 @@
 더 높은 곳에 오르는 건, 이전보다 더 힘들고 오래 걸린다.
 무한 동력은 없듯, 데굴데굴 구르던 나의 바퀴도 서서히 멈추고 있었다.
 
-그 무렵, 한 친구가 자신의 업무 환경을 하소연하며 뭐 하나만 만들어 달라고 부탁하더라.
+그 무렵, 한 친구가 자신의 업무 환경을 하소연하며 뭐 하나만 만들어 달라고 부탁했다.
 프로그래밍으로 무언가를 만들어 달라는 첫 부탁? 구미가 당길 수밖에... 바로 개발을 시작했다.
 멈춰가던 바퀴는 다시 동력을 얻어 근 1달 반을 쉬지 않고 빠르게 돌아갔다.
 결과는 대성공. 친구는 내가 만든 서비스로 1달 기준 28시간을 아낄 수 있게 되었다.
 만족하는 친구의 모습을 보며 너무나 행복했다.
 
 내가 주변인의 불편을 해소해 줄 수 있다는 것, 이를 위해 사용한 도구가 프로그래밍이라는 것, 무엇보다 이 과정을 통한 칭찬과 인정이 나에게 `행복`을 준다는 것.
-이날, 개발자가 되기로 결심했다.
+이 모든것을 깨달은 날, 개발자가 되기로 결심했다.
 
 ### 마음가짐
 
