--- a/레벨 4 글쓰기/내가 꿈꾸는 프로그래머로서의 삶.md
+++ b/레벨 4 글쓰기/내가 꿈꾸는 프로그래머로서의 삶.md
@@ -42,7 +42,7 @@
 
 ### 어떤 프로그래머가 되고 싶은가?
 
-원하던 대로 우테코에 들어와 학습한 현재 고민한 결과 어떤 프로그래머가 되고 싶은지 생각해 보았습니다.
+원하던 대로 우테코에 들어와 학습한 현재 고민한 결과, 어떤 프로그래머가 되고 싶은지 생각해 보았습니다.
 
 1. **소통을 중요시하는 프로그래머**
    
@@ -50,7 +50,7 @@
 
    기획 및 이슈들에 대해 함께 고민하며 답변을 도출해 내고, 서로의 이해도를 맞춰가는 과정이 생각보다 오래 걸렸습니다.
 
-   이 과정에서는 모두 자신의 의견을 이야기해야만 했고, 알고 있는 내용들에 다른 사람들이 이해할 수 있도록 설명하는 것이 굉장히 중요했습니다.
+   이 과정에서는 모두 자신의 의견을 이야기해야만 했고, 알고 있는 내용들에 대해 다른 사람들이 이해할 수 있도록 설명하는 것이 굉장히 중요했습니다.
 
    처음에는 생각들을 말로 풀어나가는 과정에서 어려움을 겪었습니다.
 
@@ -68,7 +68,7 @@
    
    하지만, 이는 이후에 온전히 내 것이 될 수 없음을 느꼈습니다.
    
-   기술을 도입해야 했던 이유, 코드를 그렇게 짜야 했던 이유, 이 기술이 작동하는 방법 등 제대로 이해하지 못한 경우 그저 따라 한 것이지 내가 제대로 이해하고 구현 등을 진행한 것인지 알 수 없었습니다.
+   기술을 도입해야 했던 이유, 코드를 그렇게 짜야 했던 이유, 이 기술이 작동하는 방법 등 제대로 이해하지 못한 경우 그저 따라 한 것이지 내가 제대로 이해하고 구현한 것인지 알 수  없었습니다.
    
    하지만, 이러한 고민이 진행되기 위해선 처음에 궁금증이 생겨야 한다고 생각합니다.
    
