--- a/레벨4/내가 꿈꾸는 프로그래머로서의 삶.md
+++ b/레벨4/내가 꿈꾸는 프로그래머로서의 삶.md
@@ -4,12 +4,12 @@
 
 ### 대학교
 
-컴퓨터공학과에 들어오고 1학년 때 C 수업을 들었다. 3년 내내 프로그래머가 꿈이라고 적어놨던 것에 비해 프로그래밍은 처음이었다. 그래서 ‘=’ 와 ‘==’ 의 차이점조차 이해하기 버거웠는데 포인터, 구조체와 같은 개념이 나오자, 수업을 따라가는 것이 더욱 힘들어졌다. 전과하는 것도 생각해 봤지만 그렇다고 뭔가 하고 싶은 것이 있는 것도 아니었다.
+컴퓨터공학과에 들어오고 1학년 때 C 수업을 들었다. 3년 내내 프로그래머가 꿈이라고 적어놨던 것에 비해 프로그래밍은 처음이었다. 그래서 ‘=’ 와 ‘==’ 의 차이점조차 이해하기 버거웠는데 포인터, 구조체와 같은 개념이 나오자 수업을 따라가는 것이 더욱 힘들어졌다. 전과하는 것도 생각해 봤지만 그렇다고 뭔가 하고 싶은 것이 있는 것도 아니었다.
 
-그렇게 2학년이 됐다. 학점을 채우기 위해 어쩔 수 없이 웹 개발 수업을 듣게 되었다. 이때 html, css, js를 사용한 실습을 진행했는데 코드가 입력됨에 따라 화면이 바뀌는 것에 재미를 느꼈다. 처음으로 프로그래밍이 궁금해졌다. 스터디도 하고 동아리도 하면서 개발에 대한 호기심을 채워갔다. 그리고 개발자가 되고 싶다는 꿈이 생겼다.
+그렇게 2학년이 됐다. 학점을 채우기 위해 어쩔 수 없이 웹 개발 수업을 듣게 되었다. 이때 html, css, js를 사용한 실습을 진행했는데 코드가 입력됨에 따라 화면이 바뀌는 것에 재미를 느꼈다. 처음으로 프로그래밍이 궁금해졌다. 내가 쓰고 있는 서비스들도 이렇게 만들어졌을 것이라고 생각하니까 신기했다. 개발자 도구를 켜서 어떻게 구성되었는지 확인해보기도 했다. 스터디도 하고 동아리도 하면서 개발에 대한 호기심을 채워갔다. 그리고 개발자가 되고 싶다는 꿈이 생겼다.
 
 ### 현재
 
 작은 노력들이 더해져 꿈에 가까워지게 되었다. 이제 어떤 개발자가 되고 싶은지 고민을 하게 되었다.
 
-나는 기술로 긍정적인 영향을 주는 사람이 되고 싶다. 개발자라는 직업의 가장 큰 장점이 내가 추구하는 가치를 직접 실현할 수 있다는 점이라고 생각한다. 당근마켓이 온실가스 감축 효과를 불러일으킨 것처럼, 사회적 가치를 재생산하는 서비스를 만들고 싶다.
+나는 기술로 긍정적인 영향을 주는 사람이 되고 싶다. 개발자라는 직업의 가장 큰 장점은 내가 추구하는 가치를 직접 실현할 수 있다는 점이라고 생각한다. 당근마켓이 온실가스 감축 효과를 불러일으킨 것처럼, 사회적 가치를 재생산하는 서비스를 만들고 싶다.
