--- a/내가 꿈꾸는 프로그래머로서의 삶.md
+++ b/내가 꿈꾸는 프로그래머로서의 삶.md
@@ -3,15 +3,15 @@
 개발을 시작하게 된 계기는 특별하지 않았다.  
 어릴 적부터 컴퓨터 게임을 좋아했고, 초등학생 때 컴퓨터 관련 자격증을 여러 개 취득했다.  
 기계 / 전기 / 화학공학과를 지원하라던 선생님의 말씀을 뒤로 하고 컴퓨터공학과에 진학했다.  
-대학교 3학년이 될 때까지 개발에는 별로 관심이 없었다. 코딩은 주어진 과제를 해결하기 위한 용도였다.  
-졸업을 위해 꼭 이수해야 하는 과목에서 프론트엔드 팀원 한자리가 비었고, 그렇게 개발을 시작했다.  
+대학교 3학년이 될 때까지 개발에는 별로 관심이 없었다. 코딩은 주어진 과제를 해결하기 위한 용도일 뿐이었다.  
+졸업을 위해 이수해야 하는 팀 프로젝트 과목에서 프론트엔드 팀원 한자리가 비었고, 그렇게 개발을 시작했다.  
 만만하게 봤던 개발은 예상보다 훨씬 어렵고 복잡했다.  
 마음만 먹으면 서비스 하나쯤 금방 만들어서 선보일 줄 알았지만 그렇지 않았다.
 
-## 우아한테크코스
+## 우아한테크코스에서 느낀 회의감
 
-무엇 하나 제대로 만들지 못하는 실력을 한탄하며 이것저것 공부하고, 우아한테크코스에 지원해서 운 좋게 합격했다.  
-미션, 페어 프로그래밍, 팀 프로젝트 등 개발을 할수록 어렵고 모르는 것투성이였지만 티 내고 싶지 않았다.  
+무엇 하나 제대로 만들지 못하는 실력을 한탄하며 이것저것 공부하다, 우아한테크코스에 운 좋게 합격했다.  
+미션, 페어 프로그래밍, 팀 프로젝트 등 개발하면서 어렵고 모르는 것투성이였지만 티 내고 싶지 않았다.  
 아는 것은 뽐내려 했고 모르는 것은 숨기려 했다. 이렇게 얻어낸 얄팍한 자존감은 오래 지속되지 않았다.  
 코드를 작성하며 실패가 반복될수록 자존감은 배로 떨어졌다.  
 앞으로 프로그래머로 살 수 있을까? 회의감이 자꾸 들었다.
@@ -28,8 +28,8 @@
 ## 내가 꿈꾸는 프로그래머로서의 삶
 
 인상 깊었던 대화의 기억을 더듬어 프로그래머로서 어떻게 살고 싶은지 나름대로 정리해 보았다.  
-하루하루 코드를 작성하고, 더 나은 코드를 고민하고 싶다.  
-아는 것은 기꺼이 상대방이 이해하기 쉽게 알려주고 싶다.  
+코드를 작성하고 더 나은 코드를 고민하는 하루하루를 보내고 싶다.  
+내가 아는 것은 상대방이 이해하기 쉽게 알려주고 싶다.  
 모르는 것을 숨기려 하지 않고 함께 머리 맞대어 고민하는 동료가 되고 싶다.  
 여러 번의 실패에 좌절하기보다 그 끝의 성공과 성취감을 즐길 줄 아는 사람이 되고 싶다.  
 잘해야 한다는 강박에 시달리지 않고, 현재에 충실하며 꾸준히 고민을 쌓아나가는 프로그래머로 살고 싶다.
